rewirt to categories

--- a/_posts/OS/2024-04-07-OS6.md
+++ b/_posts/OS/2024-04-07-OS6.md
@@ -2,7 +2,7 @@
 title: "컴퓨터 성능 향상 기술"
 layout: post
 date: 2024-04-07
-categories: Os
+categories: OS
 ---
 # 버퍼(buffer)
 - 속도에 차이가 있는 두 장치 사이에서 그 차이를 완화하는 역할을 하는 장치( 메모리 내 임시 공간)
