--- a/_posts/OS/2024-04-07-OS8.md
+++ b/_posts/OS/2024-04-07-OS8.md
@@ -46,3 +46,47 @@ categories: OS
 - **부트스트랩이 운영체제 관련 프로세스를 실행한 후 일반 프로세스가 실행된다**
 - **컴퓨터에는 일반 사용자의 사용자 프로세스와 운영체제의 커널 프로세스가 섞여서 실행된다**
 
+# 프로세스와 프로그램의 관계
+- 프로그램이 프로세스가 된다는 것은 운영체제로부터 프로세스 제어 블록을 얻었다는 뚯
+- 프로세스가 종료된다는 것은 해당 프로세스 제어 블록이 폐기된다는 뜻
+*프로세스 = 프로그램 + 프로세스 제어 블록*
+*프로그램 =프로세스 - 프로세스 제어 블록*
+
+# 프로세스의 네 가지 상태
+- 생성 상태(create status): 프롯스가 메모리에 올라와 실행 준비를 완료한 상태.
+    - 프로세스 제어 블록 생성
+- 준비 상태(ready status): 생성된 프로세스가 CPU를 얻을 때까지 기다리는 상태
+- 실행 상태(running status): 준비 상태에 있는 프로세스 중 하나가 CPU를 얻어 실제 작업을 수행하는 상태. execute status 라고도 함.
+- 완료 상태(terminate status): 실행 상태의 프로세스가 주어진 시간 동안 작업을 마치면 진입하는 상태.
+    - 프로세스 제어 블록 사라짐
+![four state of process](/assets/osimg/state_of_process.png)
+- CPU 스케줄러(CPU scheduler): 준비 상태에 있는 여러 프로세스 중 다음에 실행할 프로세스를 선정
+- 디스패치(dispatch): 준비 상태의 프로세스 중 하나를 골라 실행 상태로 바꾸는 CPU 스케줄러의 작업
+- 타임아웃(time out): 프로세스가 자신에게 주어진 하나의 타임 슬라이스 동안 작업을 끝내지 못해 다시 준비 상태로 돌아가는 것
+
+# 프로세스의 다섯 가지 상태
+![5states of process](/assets/osimg/five_states.png)
+- 대기 상태(blocking status): 실행 상태의 프로세스가 입출력을 요청하면 입출력이 완료될 때까지 기다리는 상태로 작업 효율을 높이기 위해 만들어진 것.
+    - **wait status 라고도 함**
+    - **입출력 장치별로 만들어진 큐에서 대기함**
+
+# 프로세스의 상태 정리
+![states](/assets/osimg/states.png)
+
+# 프로세스의 상태
+1. 활성 상태: 생성,준비,실행, 대기, 완료
+2. 휴식 상태
+3. 보류 상태
+
+# 휴식 상태와 보류 상태
+- 휴식 상태(pause status): 프로세스가 작업을 일시적으로 쉬고 있는 상태.(**메모리에 있음**)
+- 보류 상태(suspend status): 프로세스가 메모리에서 잠시 쫓겨난 상태로 '일시 정지 상태'라고도 불림 (**swap 영역에 있음**)
+    - 메모리가 꽉 차서 일부 프로세스를 메모리 밖으로 내보낼 때
+    - 프로그램에 오류가 있어서 실행을 미루어야 할 때
+    - 바이러스와 같이 악의적인 공격을 하는 프로세스라고 판단될 때
+    - 매우 긴 주기로 반복되는 프로세스라 메모리 밖으로 쫓아내도 큰 문제가 없을 때
+    - 입출력을 기다리는 프로세스의 입출력이 계속 지연될 때
+
+# 보류 상태를 포함한 프로세스의 상태
+![state2](/assets/osimg/state2.png)
+
