--- a/_posts/OS/2024-04-09-OS1.md
+++ b/_posts/OS/2024-04-09-OS1.md
@@ -70,3 +70,16 @@ layout: post
 
 # 커널 스레드 (1 to 1 모델)
 ![kernerl thred](/assets/osimg/kernel_thred.png)
+- 하나의 사용자 스레드가 하나으 커널 스레드와 연결 ( 1 to 1 모댈)
+- 독립적으로 스케줄링 되므로 특정 스레드가 대기 상태에 들어가도 다른 스레드는 작업을 계속할 수 있음
+- 커널 레벨에서 모든 작업을 지원하기 때문에 멀치 CPU를 사용할 수 있음
+- 하나의 스레드가 대기 상태에 있어도 다른 스레드는 작업을 계속할 수 있음
+- 커널의 기능을 사용하므로 보안에 강하고 안정적으로 작동
+- 문맥 교환할 때 오버헤드 때문에 느리게 작동
+
+# 멀티레벨 스레드(M to N 모델)
+![multylevel thred](/assets/osimg/multylevel_thred.png)
+- 사용자 스레드와 커널 스레드를 혼합한 방식(M to N 모델)
+- 커널 스레드가 대기 상태에 들어가면 다른 커널 스레드가 대신 작업을 하여 사용자 스레드보다 유연하게 작업을 처리할 수 있음
+- 커널 스레드를 같이 사용하기 때문에 여전히 문맥 교환 시 오버헤드가 있어 사용자 스레드만큼 빠르지 않음
+- 빠르게 움지겨야 하는 스레드는 사용자 스레드로 작동하고, 안정적으로 움직여야 하는 스레드는 커널 스레드로 작동
