--- a/_posts/OS/2024-04-07-OS4.md
+++ b/_posts/OS/2024-04-07-OS4.md
@@ -58,7 +58,7 @@ categories: OS
 
 # 메인보드
 - CPU와 메모리 등 다양한 부품을 연결하는 커다란 판
-- 다양한 장치들을 데이터 버스(bus)로 연결 함, **데이터 버스**는 데이터가 지나다니는 통로
+- 다양한 장치들을 버스(bus)로 연결 함, **데이터 버스**는 데이터가 지나다니는 통로
 - 그래픽카드, 사운드카드, 랜카드 등이 기본적으로 장착되어 있기도 하고, 성능을 향상하기 위해 따로 장착자하기도 함.
 ![bus](/assets/osimg/bus.png)
 
@@ -111,7 +111,7 @@ categories: OS
     - ex) **3GHz의 CPU: 1초 동안 약 3*10^9회의 작업**
 
 # 시스템 버스와 CPU버스
-- 시스템 버스(system bus)는 CPU와 메모리와 주변장치를 연결하는 데이터 버스로, 메인보드의 동작 속도를 의미하며 **FSB(Front-Side Bus)혹은 전면 버슬고 부름
+- 시스템 버스(system bus)는 CPU와 메모리와 주변장치를 연결하는 버스로, 메인보드의 동작 속도를 의미하며 **FSB(Front-Side Bus)혹은 전면 버슬고 부름
 - CPU 버스는 CPU 내부의 다양한 장치를 연결하는 것으로 BSB(Back Side Bus)혹은 후면 버스라 부름
 - BSB 속도는 CPU 클록과 같고 FSB보다 빠름
 ![performance](/assets/osimg/performance.png)
