--- a/_posts/OS/2024-04-07-OS.md
+++ b/_posts/OS/2024-04-07-OS.md
@@ -181,16 +181,17 @@ CUI -> GUI -> TUI -> SUI -> NUI
 # P2P 시스템의 예: 메신저
 - 메신저는 사용자가 서버에서 인증을 마치면 상대방과 P2P로 직접 연결됨
     - ex) 모바일 메신저 ex) 카카오톡
+
 # 서버가 없는 완전한 P2P 시스템: 블록체인
-    - **블록체인(block chain)**은 P2P 시스템 전체에 거래 장부를 분산시킨 뒤 전체 시스템의 50% 이상이 동의할 때만 거래 장부 변경 가능
-    - 현재의 컴퓨팅 기술로는 해킹이 불가능한 시스템
-    - 대체 불가 토큰 또는 NFT(Non-Fungible Token)로 불리는 디지털 자산의 유일성을 증명하는 데 블록체인 사용
-    ![central focus block chain](/assets/osimg/block_chain.png)
+- **블록체인(block chain)**은 P2P 시스템 전체에 거래 장부를 분산시킨 뒤 전체 시스템의 50% 이상이 동의할 때만 거래 장부 변경 가능
+- 현재의 컴퓨팅 기술로는 해킹이 불가능한 시스템
+- 대체 불가 토큰 또는 NFT(Non-Fungible Token)로 불리는 디지털 자산의 유일성을 증명하는 데 블록체인 사용
+![central focus block chain](/assets/osimg/block_chain.png)
 
 # 클라우드 컴퓨팅
-- 분산시스템이 **그리드 컴퓨팅(grid computing)으로 발전
+- 분산시스템이 **그리드 컴퓨팅(grid computing)**으로 발전
 - 그리드 컴퓨팅은 여러 곳에 떨어진 컴퓨팅 파워나 소프트웨어를 하나로 묶어 하나의 컴퓨터처럼 사용하는 기술
-- **클라우드 컴퓨팅(cloud computing)은 하드웨어와 소프트웨어를 클라우드라는 중앙 시스템에 숨기고 사용자는 필요한 서비스만 쉽게 이용하는 컴퓨팅 환경
+- **클라우드 컴퓨팅(cloud computing)**은 하드웨어와 소프트웨어를 클라우드라는 중앙 시스템에 숨기고 사용자는 필요한 서비스만 쉽게 이용하는 컴퓨팅 환경
 - 클라우드 컴퓨팅의 하드웨어 구현에 그리드 컴퓨팅 기술 사용
 - 그리드 컴퓨팅은 슈퍼컴퓨터와 맞먹는 높은 수준의 컴퓨팅 파워를 제공하는 것
 - 클라우드 컴퓨팅은 서비스 중심의 환경이라는 것이 가장 큰 차이점
