--- a/_posts/OS_Q/2024-04-11-OS11.md
+++ b/_posts/OS_Q/2024-04-11-OS11.md
@@ -4,3 +4,85 @@ date: 2024-04-11
 categories: OS
 layout: post
 ---
+### 문제
+
+1.  스레드가 CPU에서 처리하는 작업 단위라면, 운영체제에서의 작업 단위는 무엇인가?
+2.  멀티스레드와 멀티태스킹의 차이점은 무엇인가?
+3.  멀티스레드의 구조에 대한 설명 중 틀린 것은 무엇인가? (옵션: 스레드들은 변수나 함수 등을 공유한다, 각 스레드는 독립적으로 실행된다, 프로세스가 종료되면 모든 스레드가 종료된다, 스레드들은 서로 독립적인 메모리 영역을 가진다)
+4.  fork() 시스템 호출과 exec() 시스템 호출의 주요 차이점은 무엇인가?
+5.  커널 스레드와 사용자 스레드의 차이점은 무엇인가?
+
+
+### 문제
+
+1.  CPU 입장에서 작업의 단위는 무엇인가요?
+    
+    *   A) 프로세스
+    *   B) 스레드
+    *   C) 프로그램
+    *   D) 명령어
+2.  멀티스레드의 주요 장점으로 틀린 것은?
+    
+    *   A) 응답성 향상
+    *   B) 자원 공유
+    *   C) 다중 CPU 지원
+    *   D) 모든 스레드가 독립적으로 실행
+3.  커널 스레드와 사용자 스레드의 차이점 중 올바른 것은?
+    
+    *   A) 사용자 스레드는 커널이 직접 생성하고 관리한다.
+    *   B) 커널 스레드는 라이브러리에 의해 구현된 일반적인 스레드다.
+    *   C) 커널 스레드는 멀티 CPU 환경을 지원한다.
+    *   D) 사용자 스레드는 문맥 교환이 필요 없다.
+4.  멀티스레드 환경에서 하나의 스레드가 문제를 일으키면 어떤 영향을 미치나요?
+    
+    *   A) 해당 스레드만 영향을 받는다.
+    *   B) 동일한 프로세스 내의 다른 스레드에게도 영향을 미친다.
+    *   C) 시스템 전체가 다운된다.
+    *   D) 문제가 된 스레드는 자동으로 재시작된다.
+5.  M to N 모델의 스레딩에서는 어떤 특징이 있나요?
+    
+    *   A) 하나의 사용자 스레드가 여러 커널 스레드와 연결된다.
+    *   B) 여러 사용자 스레드가 단일 커널 스레드와 연결된다.
+    *   C) 사용자 스레드와 커널 스레드를 혼합한 방식이다.
+    *   D) 오직 커널 스레드만이 사용된다.
+
+
+### 문제
+
+87.  스레드는 CPU 스케줄러가 CPU에 전달하는 작업의 단위이다. (O/X)
+88.  프로세스 내의 스레드들은 서로 독립적으로 운영되며 서로에게 영향을 주지 않는다. (O/X)
+89.  멀티태스킹은 하나의 CPU에서 여러 개의 프로세스를 동시에 실행하는 기법이다. (O/X)
+90.  멀티스레드 환경에서 하나의 스레드에 문제가 생기면 해당 프로세스 전체에 영향을 미칠 수 있다. (O/X)
+91.  사용자 스레드는 커널이 직접 생성하고 관리하는 스레드이다. (O/X)
+92.  멀티레벨 스레드 모델은 사용자 스레드와 커널 스레드를 혼합한 방식으로, M to N 모델이라고도 한다. (O/X)
+
+
+<hr>
+
+
+### 답변
+
+1.  운영체제에서의 작업 단위는 프로세스이다.
+2.  멀티스레드는 프로세스 내의 작업을 여러 개의 스레드로 분할하여 처리하는 반면, 멀티태스킹은 운영체제가 CPU에 작업을 할당할 때 시간을 잘게 나누어 배분하는 기법이다.
+3.  스레드들은 서로 독립적인 메모리 영역을 가진다는 설명은 틀렸다. 스레드들은 변수나 함수 등을 공유한다.
+4.  fork() 시스템 호출은 실행 중인 프로세스로부터 새로운 프로세스를 복사하여 생성하는 반면, exec() 시스템 호출은 기존의 프로세스를 새로운 프로세스로 전환(재사용)하는 기능이다.
+5.  커널 스레드는 커널이 직접 생성하고 관리하는 스레드이며, 사용자 스레드는 라이브러리에 의해 구현된 일반적인 스레드이다.
+
+
+### 정답
+
+1.  B) 스레드
+2.  D) 모든 스레드가 독립적으로 실행
+3.  C) 커널 스레드는 멀티 CPU 환경을 지원한다.
+4.  B) 동일한 프로세스 내의 다른 스레드에게도 영향을 미친다.
+5.  C) 사용자 스레드와 커널 스레드를 혼합한 방식이다.
+
+
+### 답변
+
+87.  O (스레드는 CPU 스케줄러가 CPU에 전달하는 작업의 단위이다.)
+88.  X (프로세스 내의 스레드들은 강하게 연결되어 있으며, 서로 독립적이지 않고 자원을 공유하기 때문에 하나에 문제가 생기면 다른 스레드에도 영향을 줄 수 있다.)
+89.  O (멀티태스킹은 하나의 CPU에서 여러 개의 프로세스를 동시에 실행하는 기법이다.)
+90.  O (멀티스레드 환경에서 하나의 스레드에 문제가 생기면 해당 프로세스 전체에 영향을 미칠 수 있다.)
+91.  X (사용자 스레드는 라이브러리에 의해 구현된 일반적인 스레드로, 커널이 직접 생성하고 관리하는 스레드는 커널 스레드이다.)
+92.  O (멀티레벨 스레드 모델은 사용자 스레드와 커널 스레드를 혼합한 방식으로, M to N 모델이라고도 한다.)
