--- a/_posts/OS/2024-04-08-OS10.md
+++ b/_posts/OS/2024-04-08-OS10.md
@@ -21,7 +21,7 @@ categories: OS
 - 운영체제가 사용자 프로세스를 작동하기 위해 유지하는 영역으로 사용자에게는 보이지 않음
 
 # 프로세스의 생성과 실행
-- 프로세스는 언제 생성되나? 프로그램을 실행할 때 새로 생성된다/
+- 프로세스는 언제 생성되나? 프로그램을 실행할 때 새로 생성된다
 - 사용자가 프로그램을 실행하면? OS가 그 프로그램을 메모리에 가져와 코드 영역에 집어 넣고 PCB를 생성한다. 또한 메모리에 데이터 영역과 스택 영역을 확보한 후 프로세스를 실행한다.
 
 # 프로세스의 생성 방법
@@ -67,8 +67,6 @@ categories: OS
 ![exec](/assets/osimg/exec2.png)
 
 # exec() 시스템 호출의 예
-- 부모 프로세스의 fork() 문을 실행하여 자식 프로세스를 생성하고, wait() 문을 실행하여 자식 프로세스가 끝날 때까지 기다림
-- 새로 생성된 자식 프로세스는 부모 프로세스의 코드와 같음
 - exec() 시스템 호출을 사용하여 새로운 프로세스로 전환하더라도 프로세스 제어 블록의 각종 프로세스 구분자(PID, PPID, CPID)가 변경되지 않기 때문에, 프로세스가 종료된 후 부모 프로세스로 돌아올 수 있음
 ![call to exec](/assets/osimg/call_exec.png)
 
@@ -85,16 +83,11 @@ categories: OS
 - 프로세스를 계층 구조로 만들면 프로세스 간의 책임 관계가 분명해져서 시스템을 관리하기가 수월
 
 # 고아 프로세스와 좀비 프로세스
-- 고아 프로세스(orphan process)는 부모 프로세스가 먼저 종료되어 돌아갈 곳이 없는 **비정상적으로 남아있는** 프로세스
-- 좀비 프로세스(zombie process)는 자식 프로세스가 종료되었는데도 부모 프로세스가 **연략받지 못해** 뒤처리르 하지 않아 발생하는 프로세스
+- **고아 프로세스(orphan process)**는 부모 프로세스가 먼저 종료되어 돌아갈 곳이 없는 **비정상적으로 남아있는** 프로세스
+- **좀비 프로세스(zombie process)**는 자식 프로세스가 종료되었는데도 부모 프로세스가 **연략받지 못해** 뒤처리르 하지 않아 발생하는 프로세스
 - C 언어에는 exit() 또는 return()문을 사용해 자식 프로세스의 작업이 끝났음을 부모 프로세스에 알림
 
-```python
-int main(){
-    printf("Hello \n");
-    exit(0);
-}
-```
+
 
 # 좀비 프로세스와 컴퓨터를 오래 켜면 컴퓨터가 느려지는 현상
 - 부팅할 때는 없었던 각종 프로세스가 메모리에 상주하는 데다 좀비 프로세스가 메모리를 차지하기 때문
