--- a/_posts/OS_Q/2024-04-11-OS10.md
+++ b/_posts/OS_Q/2024-04-11-OS10.md
@@ -4,3 +4,93 @@ date: 2024-04-11
 layout: post
 categories: OS
 ---
+### 문제
+
+1.  프로세스와 프로그램의 기본 차이는 무엇인가?
+2.  프로세스의 코드 영역에는 어떤 종류의 데이터가 저장되는가?
+3.  fork() 시스템 호출의 주요 기능은 무엇인가?
+4.  exec() 시스템 호출을 사용하면 프로세스의 어떤 부분이 변경되는가?
+5.  프로세스 제어 블록(PCB)에 저장되는 정보 중 프로세스의 현재 상태를 나타내는 정보는 무엇인가?
+6.  고아 프로세스(orphan process)와 좀비 프로세스(zombie process)의 정의는 무엇인가?
+7.  프로세스가 실행을 완료하고 종료될 때 어떤 작업이 필요한가?
+
+
+### 문제
+
+1.  프로세스 제어 블록(PCB)이 저장하지 않는 정보는 무엇인가요?
+    
+    *   A) 프로세스의 현재 상태
+    *   B) 실행할 다음 명령어의 주소
+    *   C) 프로세스가 사용한 입출력 자원 정보
+    *   D) 프로세스의 소유자 이름
+2.  fork() 시스템 호출의 주된 기능은 무엇인가요?
+    
+    *   A) 새로운 프로세스를 종료시키는 것
+    *   B) 실행 중인 프로세스로부터 새로운 프로세스를 복사하는 것
+    *   C) 프로세스의 우선순위를 변경하는 것
+    *   D) 기존의 프로세스를 새로운 코드로 변경하는 것
+3.  exec() 시스템 호출이 실행될 때 무엇이 변경되지 않나요?
+    
+    *   A) 프로세스의 메모리 영역
+    *   B) 프로세스 구분자(PID)
+    *   C) 프로그램 카운터의 값
+    *   D) 사용한 파일 정보
+4.  문맥 교환(context switching)이 필요한 이유는 무엇인가요?
+    
+    *   A) CPU 사용 시간을 늘리기 위해
+    *   B) 단일 프로세스만 실행하기 위해
+    *   C) 새로운 프로세스가 CPU를 효율적으로 사용할 수 있도록 하기 위해
+    *   D) 프로세스가 더 많은 메모리를 사용하도록 하기 위해
+5.  좀비 프로세스(zombie process)가 발생하는 원인은 무엇인가요?
+    
+    *   A) 부모 프로세스가 자식 프로세스보다 먼저 종료되었을 때
+    *   B) 자식 프로세스가 종료되었지만 부모 프로세스가 그 상태를 확인하지 않았을 때
+    *   C) 프로세스가 너무 많은 메모리를 사용했을 때
+    *   D) 프로세스가 CPU 시간을 과도하게 사용했을 때
+
+
+### 문제
+
+79.  프로세스의 코드 영역은 프로그래머가 작성한 코드가 저장되는 곳으로, 탑재된 코드는 수정할 수 없는 읽기 전용으로 처리된다. (O/X)
+80.  데이터 영역은 프로세스가 실행되면서 사용하는 변수나 파일 등의 변하지 않는 데이터를 모아놓은 곳이다. (O/X)
+81.  스택 영역은 프로세스 내에서 함수를 호출할 때 함수의 반환 주소를 저장하는 곳이다. (O/X)
+82.  fork() 시스템 호출은 실행 중인 프로세스를 복사하여 새로운 프로세스를 생성한다. (O/X)
+83.  exec() 시스템 호출은 기존 프로세스의 구조를 재활용하여 새로운 프로세스로 전환하는 함수이다. (O/X)
+84.  유닉스의 모든 프로세스는 init 프로세스의 자식이 되어 트리 구조를 이룬다. (O/X)
+85.  고아 프로세스는 자식 프로세스가 종료되었는데도 부모 프로세스가 연락받지 못해 뒤처리를 하지 않아 발생하는 프로세스이다. (O/X)
+86.  컴퓨터를 오래 켜두면 좀비 프로세스와 같은 메모리를 차지하는 프로세스 때문에 컴퓨터의 성능이 저하될 수 있다. (O/X)
+
+
+<hr>
+
+
+### 답변
+
+1.  프로그램은 저장장치에 저장되어 있는 정적인 상태를 말하며, 프로세스는 실행을 위해 메모리에 올라온 동적인 상태를 말한다.
+2.  프로그래머가 작성한 코드가 탑재되며, 이 코드는 읽기 전용으로 처리된다.
+3.  실행 중인 프로세스로부터 새로운 프로세스를 복사하여 생성하는 기능이다.
+4.  기존의 프로세스를 새로운 프로세스로 전환하며, 코드 영역, 데이터 영역, 스택 영역을 새로운 내용으로 바꾸고 각종 레지스터 정보를 리셋한다.
+5.  프로세스가 현재 어떤 상태에 있는지를 나타내는 정보는 프로세스 상태이다.
+6.  고아 프로세스는 부모 프로세스가 먼저 종료되어 돌아갈 곳이 없는 프로세스를, 좀비 프로세스는 자식 프로세스가 종료되었는데도 부모 프로세스가 연락 받지 못해 뒤처리를 하지 않아 발생하는 프로세스를 말한다.
+7.  프로세스가 종료되면 그 프로세스가 사용한 메모리 공간을 깨끗이 청소하여 시스템 리소스를 회수해야 한다.
+
+
+### 정답
+
+1.  D) 프로세스의 소유자 이름
+2.  B) 실행 중인 프로세스로부터 새로운 프로세스를 복사하는 것
+3.  B) 프로세스 구분자(PID)
+4.  C) 새로운 프로세스가 CPU를 효율적으로 사용할 수 있도록 하기 위해
+5.  B) 자식 프로세스가 종료되었지만 부모 프로세스가 그 상태를 확인하지 않았을 때
+
+
+### 답변
+
+79.  O (프로세스의 코드 영역은 프로그래머가 작성한 코드가 저장되는 곳으로, 탑재된 코드는 수정할 수 없는 읽기 전용으로 처리된다.)
+80.  X (데이터 영역은 프로세스가 실행되면서 사용하는 변수나 파일 등의 **변하는** 데이터를 모아놓은 곳이다.)
+81.  O (스택 영역은 프로세스 내에서 함수를 호출할 때 함수의 반환 주소를 저장하는 곳이다.)
+82.  O (fork() 시스템 호출은 실행 중인 프로세스를 복사하여 새로운 프로세스를 생성한다.)
+83.  O (exec() 시스템 호출은 기존 프로세스의 구조를 재활용하여 새로운 프로세스로 전환하는 함수이다.)
+84.  O (유닉스의 모든 프로세스는 init 프로세스의 자식이 되어 트리 구조를 이룬다.)
+85.  X (고아 프로세스는 부모 프로세스가 먼저 종료되어 돌아갈 곳이 없는 비정상적으로 남아있는 프로세스이다. 자식 프로세스가 종료되었는데도 부모 프로세스가 연락받지 못해 뒤처리를 하지 않아 발생하는 프로세스는 **좀비 프로세스**이다.)
+86.  O (컴퓨터를 오래 켜두면 좀비 프로세스와 같은 메모리를 차지하는 프로세스 때문에 컴퓨터의 성능이 저하될 수 있다.)
