--- a/_posts/OS_Q/2024-04-11-OS7.md
+++ b/_posts/OS_Q/2024-04-11-OS7.md
@@ -4,3 +4,73 @@ layout: post
 date: 2024-04-11
 categories: OS
 ---
+### 문제
+
+1.  하나의 코어에서 여러 개의 명령어를 동시에 처리하는 것을 무엇이라 하는가?
+2.  스레드는 CPU에서 처리할 수 있는 작업의 단위인데, CPU 멀티스레드는 무엇을 의미하는가?
+3.  현대의 CPU가 하나의 칩에 멀티코어와 명령어 병렬 처리 기능을 구현함으로써 얻는 이점은 무엇인가?
+4.  무어의 법칙이 최근에 어떻게 변화하고 있는가?
+5.  암달의 법칙에 따르면, CPU 속도만을 높인다고 해서 컴퓨터의 전반적인 성능이 어떻게 되는가?
+
+### 문제
+
+1.  CPU에서 하나의 코어가 동시에 여러 개의 명령어를 처리하는 기능을 무엇이라고 하나요?
+    
+    *   A) 멀티스레딩
+    *   B) 명령어 병렬 처리
+    *   C) 멀티코어
+    *   D) 하이퍼스레딩
+2.  CPU 멀티스레드란 무엇인가요?
+    
+    *   A) CPU가 단일 스레드만 처리하는 방식
+    *   B) 하나의 코어에서 여러 개의 CPU가 작업하는 것
+    *   C) 여러 개의 스레드를 동시에 처리하는 방법
+    *   D) CPU가 다른 주변장치와 통신하는 방법
+3.  무어의 법칙에 따르면 CPU의 속도는 어떻게 변화하나요?
+    
+    *   A) 12개월마다 2배 빨라진다.
+    *   B) 24개월마다 2배 빨라진다.
+    *   C) 36개월마다 2배 빨라진다.
+    *   D) 시간에 따라 일정하게 빨라진다.
+4.  암달의 법칙(Amdahl's law)이 주장하는 핵심 내용은 무엇인가요?
+    
+    *   A) CPU 속도가 빨라져도 컴퓨터의 전체 성능이 반드시 2배 향상되는 것은 아니다.
+    *   B) CPU 속도를 올리면 컴퓨터의 전체 성능이 항상 2배 향상된다.
+    *   C) 주변장치의 속도 향상이 CPU 성능에 큰 영향을 미치지 않는다.
+    *   D) 멀티코어 CPU는 싱글코어 CPU보다 성능이 항상 2배 이상 향상된다.
+
+
+### 문제
+
+61.  하나의 코어에서 여러 개의 명령어를 동시에 처리할 수 있는 기능을 멀티스레드라고 한다. (O/X)
+62.  CPU 멀티스레드는 CPU가 처리할 수 있는 작업의 단위인 여러 개의 스레드를 동시에 처리할 수 있다. (O/X)
+63.  무어의 법칙에 따르면, CPU의 처리 속도는 18개월마다 2배씩 증가한다. (O/X)
+64.  암달의 법칙은 주변장치의 향상 없이 CPU 속도만을 높인다면 컴퓨터의 전반적인 성능 향상이 기대하기 어렵다는 내용을 담고 있다. (O/X)
+65.  멀티코어 CPU에서는 실제 코어의 수보다 더 많은 수의 논리적 코어를 가질 수 없다. (O/X)
+
+
+<hr>
+
+### 답변
+
+1.  명령어 병렬 처리(instruction parallel processing)라고 한다.
+2.  CPU 멀티스레드는 하나의 CPU가 여러 개의 스레드를 동시에 처리하는 기능을 의미한다.
+3.  코어의 물리적인 수가 제한적임에도 불구하고, 명령어 병렬 처리로 인해 논리적인 코어의 수를 증가시켜 성능을 향상시키는 효과를 얻을 수 있다.
+4.  CPU의 처리 속도를 단순히 높이는 대신, 멀티코어를 장착하여 CPU를 여러 개 사용하는 것과 같은 효과를 얻어 성능을 향상시키는 방향으로 변화하고 있다.
+5.  암달의 법칙에 따르면, CPU 속도만을 높여도 메모리와 같은 주변장치의 성능이 CPU의 발전 속도를 따라가지 못하기 때문에 컴퓨터의 전반적인 성능이 기대만큼 증가하지 않는다.
+
+
+### 정답
+
+1.  B) 명령어 병렬 처리
+2.  C) 여러 개의 스레드를 동시에 처리하는 방법
+3.  B) 24개월마다 2배 빨라진다.
+4.  A) CPU 속도가 빨라져도 컴퓨터의 전체 성능이 반드시 2배 향상되는 것은 아니다.
+
+### 답변
+
+61.  X (멀티스레드는 하나의 코어에서 여러 개의 명령어를 동시에 처리하는 기능이 아니라, 여러 개의 스레드를 동시에 처리하는 기능을 말한다. 하나의 코어에서 여러 개의 명령어를 동시에 처리하는 것은 명령어 병렬 처리이다.)
+62.  O (CPU 멀티스레드는 CPU가 처리할 수 있는 작업의 단위인 여러 개의 스레드를 동시에 처리할 수 있다.)
+63.  X (무어의 법칙에 따르면, CPU의 처리 속도는 24개월마다 2배씩 증가한다고 한다.)
+64.  O (암달의 법칙은 주변장치의 향상 없이 CPU 속도만을 높인다면 컴퓨터의 전반적인 성능 향상이 기대하기 어렵다는 내용을 담고 있다.)
+65.  X (멀티코어 CPU에서는 실제 코어의 수보다 더 많은 수의 논리적 코어를 가질 수 있다. 이는 명령어 병렬 처리 기능과 멀티스레드 기술을 통해 가능하다.)
