--- a/_posts/OS_Q/2024-04-11-OS8.md
+++ b/_posts/OS_Q/2024-04-11-OS8.md
@@ -4,3 +4,115 @@ date: 2024-04-11
 layout: post
 categories: OS
 ---
+### 문제
+
+1.  프로세스와 프로그램의 가장 큰 차이점은 무엇인가?
+2.  시분할 방식의 요리 비유에서, 요리사는 무엇을 기반으로 요리를 선택하여 실행하는가?
+3.  프로세스 제어 블록(PCB)에 포함된 세 가지 대표적인 정보는 무엇인가?
+4.  프로세스의 생성 상태에서 주로 어떤 작업이 이루어지는가?
+5.  실행 상태에서 프로세스가 작업을 완료하지 못하고 준비 상태로 돌아가는 것을 무엇이라 하는가?
+6.  대기 상태와 보류 상태의 차이점은 무엇인가?
+7.  휴식 상태와 보류 상태 중, 메모리에서 잠시 쫓겨난 상태를 무엇이라 하는가?
+
+
+### 문제
+
+1.  프로세스와 프로그램의 차이점으로 올바른 설명은?
+    
+    *   A) 프로그램은 동적인 상태이며, 프로세스는 정적인 상태이다.
+    *   B) 프로그램은 메모리에 올라와 실행되는 상태이며, 프로세스는 저장장치에 있는 정적인 상태이다.
+    *   C) 프로세스는 메모리에 올라와 실행되는 상태이며, 프로그램은 저장장치에 있는 정적인 상태이다.
+    *   D) 프로세스와 프로그램은 동일한 개념으로 사용된다.
+2.  프로세스 제어 블록(PCB)에 저장되지 않는 정보는?
+    
+    *   A) 프로세스 구분자(PID)
+    *   B) 메모리 관련 정보
+    *   C) 프로세스의 사용자 이름
+    *   D) 각종 중간값
+3.  프로세스의 상태 중 CPU를 얻어 실제 작업을 수행하는 상태는 무엇인가?
+    
+    *   A) 생성 상태
+    *   B) 준비 상태
+    *   C) 실행 상태
+    *   D) 완료 상태
+4.  입출력 작업을 요청하고 완료될 때까지 기다리는 프로세스의 상태는 무엇인가?
+    
+    *   A) 대기 상태
+    *   B) 준비 상태
+    *   C) 보류 상태
+    *   D) 휴식 상태
+5.  메모리에서 일시적으로 쫓겨나 '일시 정지 상태'에 있는 프로세스의 상태는 무엇인가?
+    
+    *   A) 휴식 상태
+    *   B) 보류 상태
+    *   C) 실행 상태
+    *   D) 대기 상태
+
+
+### 문제
+
+1.  프로세스와 프로그램의 차이점으로 올바른 설명은?
+    
+    *   A) 프로그램은 동적인 상태이며, 프로세스는 정적인 상태이다.
+    *   B) 프로그램은 메모리에 올라와 실행되는 상태이며, 프로세스는 저장장치에 있는 정적인 상태이다.
+    *   C) 프로세스는 메모리에 올라와 실행되는 상태이며, 프로그램은 저장장치에 있는 정적인 상태이다.
+    *   D) 프로세스와 프로그램은 동일한 개념으로 사용된다.
+2.  프로세스 제어 블록(PCB)에 저장되지 않는 정보는?
+    
+    *   A) 프로세스 구분자(PID)
+    *   B) 메모리 관련 정보
+    *   C) 프로세스의 사용자 이름
+    *   D) 각종 중간값
+3.  프로세스의 상태 중 CPU를 얻어 실제 작업을 수행하는 상태는 무엇인가?
+    
+    *   A) 생성 상태
+    *   B) 준비 상태
+    *   C) 실행 상태
+    *   D) 완료 상태
+4.  입출력 작업을 요청하고 완료될 때까지 기다리는 프로세스의 상태는 무엇인가?
+    
+    *   A) 대기 상태
+    *   B) 준비 상태
+    *   C) 보류 상태
+    *   D) 휴식 상태
+5.  메모리에서 일시적으로 쫓겨나 '일시 정지 상태'에 있는 프로세스의 상태는 무엇인가?
+    
+    *   A) 휴식 상태
+    *   B) 보류 상태
+    *   C) 실행 상태
+    *   D) 대기 상태
+
+
+
+<hr>
+
+
+### 답변
+
+1.  프로그램은 저장장치에 저장되어 있는 정적인 상태이고, 프로세스는 실행을 위해 메모리에 올라온 동적인 상태이다.
+2.  요리사는 주문 목록에 있는 주문서 중 하나를 선택하여 요리를 진행한다.
+3.  프로세스 구분자(PID), 메모리 관련 정보, 각종 중간값(각종 레지스터 정보 등)이다.
+4.  생성 상태에서는 프로세스 제어 블록 생성과 같이 프로세스가 메모리에 올라와 실행 준비를 완료하는 작업이 이루어진다.
+5.  타임아웃(time out)이라고 한다.
+6.  대기 상태는 실행 상태의 프로세스가 입출력을 요청하면 입출력이 완료될 때까지 기다리는 상태이고, 보류 상태는 프로세스가 메모리에서 잠시 쫓겨난 상태로, 외부 저장소에 있음을 의미한다.
+7.  보류 상태(suspend status)는 프로세스가 메모리에서 잠시 쫓겨난 상태를 말한다.
+
+
+### 정답
+
+1.  C) 프로세스는 메모리에 올라와 실행되는 상태이며, 프로그램은 저장장치에 있는 정적인 상태이다.
+2.  C) 프로세스의 사용자 이름
+3.  C) 실행 상태
+4.  A) 대기 상태
+5.  B) 보류 상태
+
+### 정답
+
+1.  C) 프로세스는 메모리에 올라와 실행되는 상태이며, 프로그램은 저장장치에 있는 정적인 상태이다.
+2.  C) 프로세스의 사용자 이름
+3.  C) 실행 상태
+4.  A) 대기 상태
+5.  B) 보류 상태
+
+
+
