--- a/_posts/OS_Q/2024-04-11-OS11.md
+++ b/_posts/OS_Q/2024-04-11-OS11.md
@@ -55,7 +55,7 @@ layout: post
 90.  멀티스레드 환경에서 하나의 스레드에 문제가 생기면 해당 프로세스 전체에 영향을 미칠 수 있다. (O/X)
 91.  사용자 스레드는 커널이 직접 생성하고 관리하는 스레드이다. (O/X)
 92.  멀티레벨 스레드 모델은 사용자 스레드와 커널 스레드를 혼합한 방식으로, M to N 모델이라고도 한다. (O/X)
-
+93. 일의 크기는 job(작업) > task(process) > 스레드 (O/X)
 
 <hr>
 
@@ -86,3 +86,4 @@ layout: post
 90.  O (멀티스레드 환경에서 하나의 스레드에 문제가 생기면 해당 프로세스 전체에 영향을 미칠 수 있다.)
 91.  X (사용자 스레드는 라이브러리에 의해 구현된 일반적인 스레드로, 커널이 직접 생성하고 관리하는 스레드는 커널 스레드이다.)
 92.  O (멀티레벨 스레드 모델은 사용자 스레드와 커널 스레드를 혼합한 방식으로, M to N 모델이라고도 한다.)
+93.  O
