--- a/_posts/OS/2024-04-09-OS11.md
+++ b/_posts/OS/2024-04-09-OS11.md
@@ -9,6 +9,7 @@ layout: post
 - CPU가 처리하는 작업의 단위는 프로세스로부터 전달받은 스레드
     - 운영체제 입장에서의 작업 단위는 프로세스
     - CPU 입장에서의 작업 단위는 스레드
+    - **일의 크기는 job(작업) > task(process) > 스레드**
 - 프로세스의 코드에 정의된 절차에 따라 CPU에 작업 요청을 하는 실행 단위
 
 # 프로세스와 스레드의 차이
