--- a/_posts/OS/2024-04-09-OS11.md
+++ b/_posts/OS/2024-04-09-OS11.md
@@ -29,7 +29,7 @@ layout: post
 
 ### 멀티태스킹
 - 운영체제가 CPU에 작업을 줄 때 시간을 잘게 나누어 배분하여 작업 부담을 줄이는 기법
-
+- heavy process
 ### 멀티프로세싱
 - 운영체제가 CPU를 여러 개 사용하여 여러 개의 스레드를 동시에 처리하는 작업 환경
 
@@ -38,7 +38,7 @@ layout: post
 
 # 멀티스레드의 구조
 ![multythred](/assets/osimg/multythred.png)
-
+- Light weight process
 # 멀티스레드의 예
 ![multythred](/assets/osimg/multyThred2.png)
 (*두개의 스레드가 독립적으로 실행되기 때문에 TH_Test와 Test_Main이 섞여서 출력된다.)
