--- a/_posts/OS/2024-04-11-OS13.md
+++ b/_posts/OS/2024-04-11-OS13.md
@@ -12,10 +12,12 @@ layout: post
 # 프로세스의 우선순위를 배정하는 방식
 - 고정 우선순위 방식(static priority)
     - 운영체제가 **프로세스에 우선순위를 부여하면 프로세스가 끝날 때까지 바뀌지 않는** 방식
-    -
+    - 프로세스가 작업하는 동안 우선순위가 변하지 않기 대문에 구현은 쉽지만, 시스템 상황이 시시각각 변하는데 우선순위를 고정하면 시스템 변화에 대응하기 어려워 작업 효율이 떨어짐
+    
 - 변동 우선순위 방식(dynamic priority)
-    -
-    -
+    - 프로세스 생성 시 부여받은 우선순위가 프로세스 작업 중간에 변하는 방식
+    - 구현하기 어렵지만 시스템의 효율성을 높일 수 있음
+
 # 대기 상태의 다중 큐
 - 시스템의 효율을 높이기 위해 같은 입출력을 요구한 프로세스끼리 모아 놓음
 ![temp](/assets/osimg/temp.png)
