--- a/_posts/OS_Q/2024-04-11-OS12.md
+++ b/_posts/OS_Q/2024-04-11-OS12.md
@@ -1,6 +1,62 @@
 ---
-title: "스케줄링_Q"
+title: "스케줄링시 고려사항_Q"
 date: 2024-04-11
 categories: OS
 layout: post
 ---
+### 문제
+
+1.  CPU 스케줄링의 주된 목적은 무엇인가?
+2.  고수준 스케줄링은 주로 어떤 결정을 내리는가?
+3.  저수준 스케줄링의 주요 역할은 무엇인가?
+4.  중간 수준 스케줄링은 시스템에서 어떤 문제를 방지하기 위해 도입되었나?
+5.  CPU 스케줄링의 목적 중 "반응 시간 보장"의 중요성은 무엇인가?
+
+### 문제
+
+1.  CPU 스케줄링의 주된 목적은 무엇인가?
+2.  고수준 스케줄링은 주로 어떤 결정을 내리는가?
+3.  저수준 스케줄링의 주요 역할은 무엇인가?
+4.  중간 수준 스케줄링은 시스템에서 어떤 문제를 방지하기 위해 도입되었나?
+5.  CPU 스케줄링의 목적 중 "반응 시간 보장"의 중요성은 무엇인가?
+
+
+### 문제
+
+93.  CPU 스케줄링의 목적 중 하나는 모든 프로세스가 자원을 공평하게 배정받는 것이다. (O/X)
+94.  고수준 스케줄링은 어떤 프로세스에 CPU를 할당할지 결정하는 것이다. (O/X)
+95.  중간 수준 스케줄링은 시스템 내의 프로세스 수를 조절하여 과부화를 방지하는 역할을 한다. (O/X)
+96.  CPU 스케줄링은 작업의 형평성과 효율성을 결정하는 중요한 역할을 한다. (O/X)
+97.  CPU 스케줄러는 프로세스가 생성된 후부터 종료될 때까지 모든 상태 변화를 조정하지 않는다. (O/X)
+
+
+
+<hr>
+
+
+
+### 답변
+
+1.  CPU 스케줄링의 주된 목적은 공평성을 유지하면서, 시스템의 효율성과 안정성을 보장하고, 확장성을 유지하며, 모든 프로세스의 반응 시간을 보장하고 무한 연기를 방지하는 것이다.
+2.  고수준 스케줄링은 시스템 내의 전체 작업 수를 조절하며, 어떤 작업을 시스템이 받아들일지 또는 거부할지를 결정한다.
+3.  저수준 스케줄링은 어떤 프로세스에 CPU를 할당할지, 어떤 프로세스를 대기 상태로 보낼지 결정하는 것으로, 매우 짧은 시간에 이루어지는 작업을 담당한다.
+4.  중간 수준 스케줄링은 시스템의 과부화를 막기 위해 도입되었으며, 일부 프로세스를 보류 상태로 옮겨 나머지 프로세스가 원만히 작동하도록 지원한다.
+5.  "반응 시간 보장"의 목적은 사용자에게 빠른 응답을 제공하여 시스템의 신뢰성을 높이고, 사용자 경험을 개선하는 것이다. 응답이 없을 경우 시스템이 멈춘 것으로 간주되어 사용자 불만이 발생할 수 있기 때문이다.
+
+
+### 답변
+
+1.  CPU 스케줄링의 주된 목적은 공평성을 유지하면서, 시스템의 효율성과 안정성을 보장하고, 확장성을 유지하며, 모든 프로세스의 반응 시간을 보장하고 무한 연기를 방지하는 것이다.
+2.  고수준 스케줄링은 시스템 내의 전체 작업 수를 조절하며, 어떤 작업을 시스템이 받아들일지 또는 거부할지를 결정한다.
+3.  저수준 스케줄링은 어떤 프로세스에 CPU를 할당할지, 어떤 프로세스를 대기 상태로 보낼지 결정하는 것으로, 매우 짧은 시간에 이루어지는 작업을 담당한다.
+4.  중간 수준 스케줄링은 시스템의 과부화를 막기 위해 도입되었으며, 일부 프로세스를 보류 상태로 옮겨 나머지 프로세스가 원만히 작동하도록 지원한다.
+5.  "반응 시간 보장"의 목적은 사용자에게 빠른 응답을 제공하여 시스템의 신뢰성을 높이고, 사용자 경험을 개선하는 것이다. 응답이 없을 경우 시스템이 멈춘 것으로 간주되어 사용자 불만이 발생할 수 있기 때문이다.
+
+
+### 답변
+
+93.  O (CPU 스케줄링의 목적 중 하나는 모든 프로세스가 자원을 공평하게 배정받는 것이다.)
+94.  X (고수준 스케줄링은 시스템 내의 전체 작업 수를 조절하는 것이며, 어떤 작업을 시스템이 받아들일지 또는 거부할지를 결정한다.)
+95.  O (중간 수준 스케줄링은 시스템 내의 프로세스 수를 조절하여 과부화를 방지하는 역할을 한다.)
+96.  O (CPU 스케줄링은 작업의 형평성과 효율성을 결정하는 중요한 역할을 한다.)
+97.  X (CPU 스케줄러는 프로세스가 생성된 후부터 종료될 때까지 모든 상태 변화를 조정하는 중요한 역할을 한다.)
