--- a/_posts/OS_Q/2024-04-11-OS.md
+++ b/_posts/OS_Q/2024-04-11-OS.md
@@ -7,7 +7,7 @@ categories: OS
 ### 빈칸 문제
 
 1.  PC에서 흔히 사용되는 운영체제로는 윈도우, Mac OS, 유닉스, \_\_\_\_\_\_\_\_\_\_\_ 등이 있다.
-2.  임베디드 운영체제는 CPU의 성능이 \_\_\_\_\_\_\_\_\_\_\_ 시스템에 내장하도록 만든 운영체제이다.
+2.  임베디드 운영체제는 CPU의 성능이 (낮고/높고), 메모리 크기도 (높은/작은) 시스템에 내장하도록 만든 운영체제이다.
 3.  운영체제는 컴퓨터 내의 모든 \_\_\_\_\_\_\_\_\_\_\_와 응용 프로그램 관리한다.
 4.  운영체제의 핵심 기능을 모아놓은 것으로 모든 컴퓨터 자원을 관리하는 운영체제의 부분은 무엇인가?
 5.  \_\_\_\_\_\_\_\_\_\_\_는 두 개체를 연결할 경우 필요한 매개물을 의미한다.
