--- a/_posts/OS/2024-04-07-OS2.md
+++ b/_posts/OS/2024-04-07-OS2.md
@@ -17,14 +17,14 @@ categories: OS
 
 - 시스템 호출
     - 커널이 자신을 보하기 위해 만든 인터페이스
-    - 커널은 사용자나 응용 프로그램으로부터 **컴퓨터 자원을 보호**하기 위해 **사용자나아 응용 프로그램이 자원에 직접 접근하는 것을 차단**
+    - 커널은 사용자나 응용 프로그램으로부터 **컴퓨터 자원을 보호**하기 위해 **사용자나 응용 프로그램이 자원에 직접 접근하는 것을 차단**
 
 - 응용프로그램의 입장에서의 시스템 호출 살펴보기
     - **직접 접근**
         - 두 응용 프로그램이 자기 마음에 드는 위치에 데이터를 저장하려고 함
         - 다른 사람의 데이터를 지울 수도 있고 내 데이터가 다른 사람에 의해 지워질 수도 있음
     - **시스템 호출을 통한 접근**
-        - 으용 프로그램이 직접 하드디스크에 데이터를 저장하지 않고 커널이 제공하는 wrtie()함수를 사용하여 데이터를 저장해달라고 요청
+        - 응용 프로그램이 직접 하드디스크에 데이터를 저장하지 않고 커널이 제공하는 wrtie()함수를 사용하여 데이터를 저장해달라고 요청
     - 커널이 데이터를 가져오거나 저장하는 것을 전적으로 책임지기 때문에 컴퓨터 자원 관리가 수월
 ![access](/assets/osimg/access.png)
 
@@ -66,8 +66,8 @@ categories: OS
 
 - 가상머신
     - 운영체제와 응용 프로그램 사이에서 작동하는 프로그램
-    - 가상머신 설치하면 응용 프로그램이 모두 동일 환경에서 작동하는 것처럼 보임
-    - 자바는 유닉스와 윈도우에서 작동하는 다양한 가상머신을 만들어 배포하는데 이를 자바 가상머신(Java Virtual Machine; JVM)이라고 함
+    - 가상머신을 설치하면 응용 프로그램이 모두 동일 환경에서 작동하는 것처럼 보임
+    - 자바는 유닉스와 윈도우에서 작동하는 다양한 가상머신을  만들어 배포하는데 이를 자바 가상머신(Java Virtual Machine; JVM)이라고 함
     ![concept](/assets/osimg/concept.png)
     
 
