--- a/_posts/OS_Q/2024-04-11-OS3.md
+++ b/_posts/OS_Q/2024-04-11-OS3.md
@@ -6,16 +6,7 @@ categories: OS
 ---
 ### 문제
 
-1.  유닉스는 어떤 특성 때문에 인기를 얻게 되었나?
-2.  리눅스의 시작은 무엇으로부터 비롯되었나?
-3.  General Public License (GPL)은 무엇을 가능하게 하는 라이센스인가?
-4.  애플2는 어떤 특징 때문에 개인용 컴퓨터의 시초로 볼 수 있는가?
-5.  Mac OS의 가장 큰 강점은 무엇인가?
-6.  윈도우 운영체제의 최신 버전은 몇 인가?
-7.  스마트폰 시장에서 아이폰이 사용하는 운영체제는 무엇인가?
-8.  안드로이드 운영체제의 기반이 되는 커널은 무엇인가?
-9.  iOS와 안드로이드 운영체제의 가장 큰 차이점은 무엇인가?
-10.  iOS에서 코어 프레임워크(Core Framework)의 역할은 무엇인가?
+1. __는 사용자 인터페이스보다 더 사용자 친화적이고 경험에 중심들 두는 기술
 
 
 
@@ -45,12 +36,7 @@ categories: OS
     *   B) 멀티 터치스크린 지원
     *   C) 그래픽 사용자 인터페이스(GUI) 도입
     *   D) 마우스 이용
-5.  윈도우 운영체제의 현재 버전은 몇 인가?
-    
-    *   A) 7
-    *   B) 10
-    *   C) 11
-    *   D) 12
+
 6.  안드로이드 운영체제가 사용하는 커널은 무엇인가?
     
     *   A) 마하 커널
@@ -94,16 +80,7 @@ categories: OS
 
 ### 답변
 
-1.  이식하기 쉬운 특성
-2.  리누스 토르발스가 PC에서 동작하는 유닉스 호환 커널을 작성하여 GPL로 배포한 것
-3.  소프트웨어를 누구나 자유롭게 사용, 복제, 배포, 수정할 수 있도록 규정
-4.  키보드, 메인보드, 전원장치가 하나로 합쳐진 일체형 모델이라는 특징
-5.  마우스를 이용하는 그래픽 사용자 인터페이스(GUI)를 처음 도입한 것
-6.  11
-7.  iOS
-8.  리눅스 커널
-9.  iOS는 애플 기기 전용이고 소스코드가 공개되지 않는 반면, 안드로이드는 다양한 기기에서 사용되고 소스코드가 공개됨
-10.  스마트폰에 추가된 하드웨어(예: GPS, 자이로스코프 센서)의 접근과 관리 담당
+1.  X(USER eXperience; 사용자 경험)
 
 
 ### 정답
@@ -112,7 +89,6 @@ categories: OS
 2.  B) 사용, 복제, 수정의 자유 보장
 3.  C) 멀티 터치스크린 장착
 4.  B) 멀티 터치스크린 지원
-5.  C) 11
 6.  B) 리눅스 커널
 7.  B) iOS는 애플 기기 전용, 안드로이드는 다양한 기기에서 사용 가능.
 8.  C) 안드로이드
