--- a/_posts/OS/2024-04-07-OS.md
+++ b/_posts/OS/2024-04-07-OS.md
@@ -34,7 +34,7 @@ categories: OS
 - 사용자나 응용 프로그램은 커널을 통해서만 컴퓨터 자원에 접근 가능
 - 어떤 사용자나 응용 프로그램도 컴퓨터 자원에 직접 접근할 수 없음
 ![computer structure](/assets/osimg/computer_structure.png)
-- 인터페이스를 이용해 커널에 명령을 내리면 인터페이스가 결과 전달
+- 인터페이스를 이용해 커널에 명령을 내리면 인터페이스가 결과를 요청한 응용프로그램에 전달
 - 컴퓨터 인터페이스 중 일부는 사용자 인터페이스(User Interface; UI)
     - ex)디렉터리(폴더)만들기, 파일 복사 등의 작업은 운영체제가 제공하는 UI 사용하는 것
 - 문자 기반 인터페이스 -> 그래픽 사용자 인터페이스(Graphical User Interface; GUI) -> 터치 스크린 인터페이스, 음성 인터페이스
@@ -173,7 +173,7 @@ CUI -> GUI -> TUI -> SUI -> NUI
     ![structure](/assets/osimg/structure.png)
 
 # P2P 시스템
-- 클라이언트/서버 구조의 단점이 서버 과부하를 해결하기 위해 만든 시스템
+- 클라이언트/서버 구조의 단점인 서버 과부하를 해결하기 위해 만든 시스템
 - 서버를 거치지 않고 사용자와 사용자를 직접 연결 (**Peer-to-Peer**)
 - 냅스터(mp3 공유 시스템)에서 시작하여 현재는 메신저나 토렌트 시스템에서 사용
 ![p2p](/assets/osimg/p2p.png)
