--- a/_posts/OS_Q/2024-04-11-OS.md
+++ b/_posts/OS_Q/2024-04-11-OS.md
@@ -9,19 +9,19 @@ categories: OS
 1.  PC에서 흔히 사용되는 운영체제로는 윈도우, Mac OS, 유닉스, \_\_\_\_\_\_\_\_\_\_\_ 등이 있다.
 2.  임베디드 운영체제는 CPU의 성능이 (낮고/높고), 메모리 크기도 (높은/작은) 시스템에 내장하도록 만든 운영체제이다.
 3.  운영체제는 컴퓨터 내의 모든 \_\_\_\_\_\_\_\_\_\_\_와 응용 프로그램 관리한다.
-4.  운영체제의 핵심 기능을 모아놓은 것으로 모든 컴퓨터 자원을 관리하는 운영체제의 부분은 무엇인가?
+4.  ____은 운영체제의 핵심 기능을 모아놓은 것으로 모든 컴퓨터 자원을 관리
 5.  \_\_\_\_\_\_\_\_\_\_\_는 두 개체를 연결할 경우 필요한 매개물을 의미한다.
-6.  사용자 인터페이스의 발달 과정으로 올바르게 순서대로 배열된 것은 무엇인가? CUI -> GUI -> \_\_\_\_\_\_\_\_\_\_\_ -> SUI -> NUI
+6.  사용자 인터페이스의 발달 과정을 올바른 순서로 배열하시오 __ -> GUI -> __ -> SUI -> ____
 7.  문자 사용자 인터페이스를 또 다른 이름으로 무엇이라고 하나?
 8.  운영체제가 제공하는 인터페이스를 통해 사용자가 운영체제를 편리하게 사용하도록 지원하는 예로는 \_\_\_\_\_\_\_\_\_\_\_의 그래픽 사용자 인터페이스 (GUI)가 있다.
 9.  운영체제의 목표 중 자원을 효율적으로 관리하여 같은 자원으로 더 많은 작업량을 처리하거나 같은 작업량을 처리하는 데 더 적은 자원을 사용하는 것을 무엇이라 하나?
 10.  최초의 컴퓨터로 알려진 \_\_\_\_\_\_\_\_\_\_\_는 진공관 소자가 켜지면 1, 꺼지면 0으로 판단하여 컴퓨터가 2진법을 사용하는 계기가 되었다.
-11.  필요한 프로그램과 데이터를 동시에 입력해야 작업이 가능한 시스템을 무엇이라 부르나?
+11.  천공카드 시스템은 필요한 프로그램과 데이터를 동시에 입력해야 작업이 가능하며 이것을 __ 또는 ____이라고 부름
 12.  CPU 사용 시간을 잘게 쪼개어 여러 작업에 나눠주는 시스템을 무엇이라고 하나?
 13.  여러 컴퓨터를 하나로 묶어 대형 컴퓨터의 능력에 버금가게 만든 것은 무엇인가?
 14.  작업을 요청하는 클라이언트와 요청받은 작업을 처리하는 서버의 이중 구조를 가진 시스템은 무엇인가?
-15.  사용자가 서버에서 인증을 마치면 상대방과 P2P로 직접 연결되는 메신저의 예로는 무엇이 있나?
-
+15. __는 클라이언트/서버 구조의 단점인 서버 과부하를 해결하기 위해 만든 시스템
+16. 인터페이스를 이용해 __에 명령을 내리면 인터페이스가 결과를 요청한 응용프로그램에 전달
 
 ### 문제
 
@@ -41,12 +41,7 @@ categories: OS
     
     *   A) 예
     *   B) 아니오
-4.  운영체제는 어떤 소프트웨어의 최고 소프트웨어로 간주되는가?
-    
-    *   A) 시스템 소프트웨어
-    *   B) 응용 프로그램
-    *   C) 네트워크 소프트웨어
-    *   D) 보안 소프트웨어
+
 5.  운영체제의 주요 구성 요소 두 가지는 무엇과 무엇인가?
     
     *   A) 프로세서와 메모리
@@ -77,37 +72,31 @@ categories: OS
     *   B) 프로세스 타임
     *   C) 타임 슬라이스
     *   D) 실행 단위
-10.  클라이언트/서버 시스템에서 작업을 처리하는 컴퓨터를 무엇이라 부르나?
-    
-    *   A) 클라이언트
-    *   B) 서버
-    *   C) 피어
-    *   D) 노드
-11.  P2P 시스템에서 서버를 거치지 않고 사용자와 사용자가 직접 연결되는 예로 무엇이 있나?
-    
-    *   A) 웹 브라우저
-    *   B) 이메일 시스템
-    *   C) 메신저
-    *   D) 클라우드 서비스
-12.  블록체인은 어떤 시스템의 전체에 거래 장부를 분산시킨 뒤 전체 시스템의 몇 퍼센트 이상이 동의할 때만 거래 장부 변경이 가능한가?
+
+
+
+12. 블록체인은 어떤 시스템의 전체에 거래 장부를 분산시킨 뒤 전체 시스템의 몇 퍼센트 이상이 동의할 때만 거래 장부 변경이 가능한가?
     
     *   A) 30%
     *   B) 40%
     *   C) 50%
     *   D) 60%
-13.  사물 인터넷(IoT)에서, 자동차에 무선 인터넷이 연결되면서 소프트웨어 업그레이드나 설정 변경 등을 무선으로 배포하는 기술을 무엇이라 부르나?
+
+13. 사물 인터넷(IoT)에서, 자동차에 무선 인터넷이 연결되면서 소프트웨어 업그레이드나 설정 변경 등을 무선으로 배포하는 기술을 무엇이라 부르나?
     
     *   A) NFC
     *   B) Bluetooth
     *   C) OTA
     *   D) Wi-Fi
-14.  클라우드 컴퓨팅과 가장 밀접한 기술은 무엇인가?
+
+14. 클라우드 컴퓨팅과 가장 밀접한 기술은 무엇인가?
     
     *   A) 그리드 컴퓨팅
     *   B) 분산 컴퓨팅
     *   C) P2P 컴퓨팅
     *   D) 실시간 컴퓨팅
-15.  시분할 시스템의 주된 목적은 무엇인가?
+
+15. 시분할 시스템의 주된 목적은 무엇인가?
     
     *   A) 자원을 보호하기
     *   B) 하드웨어 인터페이스 제공
@@ -128,7 +117,7 @@ categories: OS
 8.  클라이언트/서버 시스템에서는 모든 요청이 서버로 집중되어 서버 과부하가 발생할 수 있다. (O/X)
 9.  P2P 시스템에서는 사용자가 서버에서 인증을 마치면 상대방과 직접 연결되지 않는다. (O/X)
 10.  클라우드 컴퓨팅은 사용자가 필요한 서비스만 쉽게 이용할 수 있도록 하는 컴퓨팅 환경이다. (O/X)
-
+11. 운영체제는 컴퓨터 전체를 관리/운영하는 소프트웨어로, 모든 소프트웨어 위에 존재하는 최고 소프트웨어다(O/X)
 
 
 
@@ -138,11 +127,11 @@ categories: OS
 ### 빈칸 답변
 
 1.  리눅스
-2.  낮고, 메모리 크기도 작은
+2.  낮고, 작은
 3.  하드웨어
 4.  커널
 5.  인터페이스
-6.  TUI
+6.  CUI, TUI, NUI
 7.  CUI
 8.  윈도우
 9.  효율성
@@ -151,22 +140,19 @@ categories: OS
 12.  시분할 시스템
 13.  분산 시스템
 14.  클라이언트/서버 시스템
-15.  카카오톡
-
+15.  P2P 시스템
+16. 커널
 
 ### 오지선다 정답
 
 1.  C) 운영체제
 2.  B) iPhone OS
 3.  A) 예
-4.  A) 시스템 소프트웨어
 5.  B) 커널과 인터페이스
 6.  B) CUI
 7.  C) TUI
 8.  D) 운영체제 영역과 사용자 영역
 9.  C) 타임 슬라이스
-10.  B) 서버
-11.  C) 메신저
 12.  C) 50%
 13.  C) OTA
 14.  A) 그리드 컴퓨팅
@@ -185,3 +171,4 @@ categories: OS
 8.  O (클라이언트/서버 시스템에서는 모든 요청이 서버로 집중되어 서버 과부하가 발생할 수 있습니다.)
 9.  X (P2P 시스템에서는 사용자가 서버에서 인증을 마치면 상대방과 직접 연결됩니다.)
 10.  O (클라우드 컴퓨팅은 사용자가 필요한 서비스만 쉽게 이용할 수 있도록 하는 컴퓨팅 환경입니다.)
+11. O 
