--- a/_posts/OS_Q/2024-04-11-OS2.md
+++ b/_posts/OS_Q/2024-04-11-OS2.md
@@ -6,16 +6,19 @@ categories: OS
 ---
 ### 문제
 
-1.  운영체제의 핵심적인 기능을 모아놓은 것을 무엇이라고 하나?
-2.  GUI의 전체 명칭은 무엇인가?
-3.  커널이 자신을 보호하기 위해 만든 인터페이스를 무엇이라 부르나?
-4.  응용 프로그램이 직접 하드디스크에 데이터를 저장하지 않고 커널이 제공하는 함수를 사용하여 데이터를 저장해달라고 요청하는 것을 무엇이라고 하는가?
-5.  시스템 호출은 커널이 제공하는 \_\_\_\_\_\_\_\_\_\_\_의 사용과 연관된 함수이다.
-6.  커널과 하드웨어 사이의 인터페이스를 담당하는 것을 무엇이라 하는가?
-7.  초창기 운영체제의 구조로, 커널의 모든 모듈이 구분 없이 하나로 구성된 구조를 무엇이라고 하나?
-8.  계층형 구조 커널에서는 비슷한 기능을 가진 모듈을 묶어서 하나의 계층으로 만드는데, 이러한 구조를 무엇이라 부르나?
-9.  가장 기본적인 기능만 제공하며, 모듈 간 정보 교환을 프로세스 간 통신을 이용하여 이루어지는 커널의 구조를 무엇이라고 하나?
-10.  운영체제와 응용 프로그램 사이에서 작동하며, 응용 프로그램이 모두 동일 환경에서 작동하는 것처럼 보이게 하는 프로그램을 무엇이라고 하나?
+1.  커널은 __, __, __와 같은 운영체제의 핵심적인 기능을 모아놓은 것
+2.  커널 내부엔 __과  __가 있다
+3.  커널은 사용자나 응용 프로그램으로부터 ____을 보호하기 위해 사용자나 응용 프로그램이 자원 에 직접 접근하는 것을 차단 
+4.  시스템 호출을 통한 접근이란 응용 프로그램이 직접 하드디스크에 데이터를 저장하지 않고 __이 제공하는 ____함수를 사용하여 데이터를 저장해달라고 요청
+5.  시스템 호출과 유사한 용어로 ___, ___ 가 있다
+6.  __는 커널과 하드웨어의 인터페이스를 담당하며 드라이버라고도 불림
+7.  마우스와 같이 간단한 제품은 드라이버를 __이 가지고 있으나, 그래픽카드와 같이 복잡한 하드웨어의 경우 __가 드라이버를 제공함
+8. 단일형 구조 커널의 장점은 모듈 간의 __이 줄어들어 효율적인 운영이 가능하다
+9. __의 단점은 모든 모듈이 하나로 묶여 있기 때문에 버그나 오류를 처리하기가 어려움
+10. 단일형 구조 커널의 단점은 운영체제의 여러 기능이 서로 연결되어 있어 __이 높기 때문에 기능상의 작은 결함이 시스템 전체로 확산될 수 있음
+11. __은 비슷한 기능을 가진 모듈을 묶어서 하나의 계층으로 만들고 계층 간의 통신을 통해 운영체제를 구현하는 방식
+12. ______의 각 모듈은 세분화되어 존재하고 모듈 간의 정보 교환은 __ 간 통신을 이용하여 이루어짐
+13. 자바는 유닉스와 윈도우에서 작동하는 다양한 가상머신을 만들어 배포하는데 이를 ___이라고 함
 
 
 ### 문제
@@ -26,12 +29,7 @@ categories: OS
     *   B) 사용자 인터페이스 디자인, 그래픽 처리, 애플리케이션 실행
     *   C) 네트워크 설정, 보안 업데이트, 시스템 모니터링
     *   D) 파일 공유, 프린터 설정, 이메일 관리
-2.  GUI는 무엇의 약자인가요?
-    
-    *   A) General User Interface
-    *   B) Graphical User Interface
-    *   C) Gateway User Interface
-    *   D) Game User Interface
+
 3.  시스템 호출의 주요 목적은 무엇인가요?
     
     *   A) 커널의 기능을 확장하기 위함
@@ -89,22 +87,23 @@ categories: OS
 
 ### 답변
 
-1.  커널
-2.  Graphical User Interface
-3.  시스템 호출
-4.  시스템 호출을 통한 접근
-5.  시스템 자원
-6.  디바이스 드라이버
-7.  단일형 구조 커널
-8.  계층형 구조
-9.  마이크로 구조 커널
-10.  가상머신
-
+1.  프로세스 관리, 메모리 관리, 저장장치 관리
+2.  시스템 호출과 드라이버
+3.  컴퓨터 자원
+4.  커널, wrtie()
+5.  응용 프로그램 인터페이스(Application Programming Interface; API), 시스템 개발자용 키트(System Devloper’s Kit; SDK)
+6.  디바이스 드라이버(device driver)
+7. 커널, 제작자
+8. 통신 비용
+9. 단일형 구조 커널
+10. 상호 의존성
+11. 계층형 구조(Layered architecture)커널
+12. 마이크로 구조(micro architecture) 커널, 프로세스
+13. 자바 가상머신(Java Virtual Machine; JVM)
 
 ### 정답
 
 1.  A) 프로세스 관리, 메모리 관리, 저장장치 관리
-2.  B) Graphical User Interface
 3.  C) 컴퓨터 자원을 보호하기 위함
 4.  D) 시스템 호출
 5.  C) 디바이스 드라이버
