--- a/_posts/OS/2024-04-07-OS5.md
+++ b/_posts/OS/2024-04-07-OS5.md
@@ -92,7 +92,7 @@ categories: OS
 
 # 롬의 종류
 - 마스크 롬(mask ROM): 데이터를 지우거나 쓸 수 없음
-- PROM(Programmable ROM): 전용 기꼐를 이용하여 데이터를 한 번만 저장할 수 있음
+- PROM(Programmable ROM): 전용 기계를 이용하여 데이터를 한 번만 저장할 수 있음
 - EPROM(Erasable Programmable ROM): 데이터를 여러 번 쓰고 지울 수 있음
 
 # BIOS (Basic Input Output System; 기본 입출력 시스템)
