--- a/_posts/OS_Q/2024-04-11-OS4.md
+++ b/_posts/OS_Q/2024-04-11-OS4.md
@@ -6,8 +6,24 @@ categories: OS
 ---
 ### 문제
 
-1. 
-
+1. 컴퓨터 구성에서 필수장치로는 __와 __가 있
+2. 메모리는 __메모리, 주기억장치, __Memory, __Memory, __ Storage, First Storage라고도 불린다.
+3. 저장장치는 __저장장치, __기억장치, Secondary Memory, __ Memory, Secondary __, __ Stroage라고도 불린다
+4. 중앙처리장치는 __ 또는 __라고도 불린
+5. 주변장치는 ___ device 또는 입출력 장치 + __ 라고도 불린다
+6. __는 컴퓨터 내부작용의 중심으로 실제적으로 데이터를 __로 변형한다
+7. __는 CPU와 깊은 관계를 갖지만 분리해서 구별한다.
+8. Memory는 일시적으로 __를 보관하는데 사용
+9. Memory는 __(휘발성) 저장장치다
+10. GPU와 AP는 __장치의 예시다. 
+11. 메인보드는 다양한 장치들을 __로 연결하며 그 중 데이터가 지나는 통로는 __ 라고 한다 
+12. kb는 2진 크기로는 __이고 10진 크기로는 __로 표현한다.
+13. 크기 단위를 순서대로 나열하면 B,__, MB, __, __, __, EB, __, YB 가 있다
+14. 제품에 따라 제각각인 cpu 성능을 나타내는 단위는 __이고 표시 단위는 __이다 
+15. 3GHz의 CPU의 1초 동안 작업 횟수는 약 __회다.
+16. CPU 버스는 CPU 내부의 다양한 장치를 연결하는 것으로 __혹은 후면 버스라 부른다.
+17. CPU는 __ 단위로 분할되어 있으며 분할 공간마다 __로 구분
+18. __은 형태가 __ 자료를 나열하여 메모리에 __으로 저장
 
 ### 문제
 
@@ -47,7 +63,7 @@ categories: OS
     *   B) 고급언어
     *   C) 기계어
     *   D) 저급언어
-7.  배열과 연결 리스트의 차이점으로 올바른 것은?
+7.  배열 또는 연결 리스트의 설명으로 올바른 것은?
     
     *   A) 배열은 메모리에 비연속적으로 데이터를 저장
     *   B) 연결 리스트는 데이터 삽입 및 삭제가 어렵다
@@ -78,8 +94,24 @@ categories: OS
 
 ### 답변
 
-1.  
-
+1. 중앙처리장치(=CPU), 메인메모리
+2. 메인, Primary, internal, Main
+3.  보조, 보조, External, Storage, External
+4. 프로세서, CPU
+5. peripheral, 저장장치
+6. CPU, 정보
+7. Memory
+8. 데이터
+9. 임시 
+10. 입출력
+11. 버스, 데이터 버스
+12. 2^10, 10^3
+13. KB, GB,TB,PB, ZB
+14. 헤르츠, Hz
+15. 3*10^9
+16. BSB 
+17. 바이트, 주소 
+18. 배열, 같은, 연속적 
 
 ### 정답
 
