--- a/_posts/OS_Q/2024-04-11-OS5.md
+++ b/_posts/OS_Q/2024-04-11-OS5.md
@@ -6,7 +6,32 @@ categories: OS
 ---
 ### 문제
 
-1.  
+1.  __ Code = 의사코드 = __코드 = __ Language = 의사언어 = __언어 = __ = 프로그램 기술 언어
+2. __ 연산장치는 __의 덧셈,뺄셈,곱셈,나눗셈 같은 산술연산과, AND, OR 같은 __ 연산을 수행한다.
+3. pseudo code의 장점은 __ 작업을 설계 단계에서 의사코드로 미리 하는것이, 나중에 실제 코드입력, 테스트, __ 단계에서 하는 것보다 훨씬 경제적이다.
+4. CPU에서는 산술논리 연산장치, __장치, __들이 협업하여 작업 처리
+5. __ 레지스터: 메모리에서 가져온 데이터를 임시 보관
+6. 주소 레지스터: __ 또는 명령어가 저장된 메모리의 주소를 저장하는 레지스터
+7. __: 다음에 실행할 명령어의 주소를 기억했다가 제어장치에 알려줌. 명령어 포인터(instruction pointer라고도 함)
+8. __ 레지스터(instruction register; IR): 현재 실행 중인 명령어를 저장
+9. __: 데이터를 메모리에서 가져오거나 보낼 때 주소를 지정하는 데 사용 
+10. __: 메모리에서 가져오거나 옮겨갈 데이터를 임시로 저장
+11. 일반 레지스터로는 __  와 __ 가 있다.
+12. 제어 버스는 __장치와 연결된 버스로 __와 __에 제어 신호를 보내기 위해 사용하며 제어 신호는 _방향이다.
+13. 주소 버스는 __ 주소 레지스터와 연결된 버스로, __나 __에 위치 정보를 보내기 위해 사용하며 _방향이다
+14. __ 버스는 메모리 버퍼 레지스터와 연결된 버스로, __의 이동이 __방향으로 이뤄진다.
+15. __은 한 번에 전달할 수 있는 데이터의 최대 크기로 CPU가 한 번에 처리할 수 있는 데이터의 크기와 같음
+16. 버스의 __, __ 크기, __에 한 번에 저장할 수 있는 데이터의 크기는 항상 (같음/다름)
+17. __은 저장된 0과 1의 데이터가 일정 시간이 지나면 사라지므로 일정 시간마다 다시 재생시켜야 함
+18. SRAM(Static RAM)는 __이 공급되는 동안에는 데이터를 보관할 수 있어 재생할 필요가 없음
+19. SDRAM는 __이 발생할 때마다 데이터를 저장하는 동기 DRAM
+20. __는 컴퓨터를 켜면 제일 처음 작동하는 __, 컴퓨터 하드웨어 시스템 장치 확인 및 __를 로드, __에 저장되어 있음
+21. 마스크 롬(mask ROM): __를 지우거나 쓸 수 (있음/없음)
+22. __: 전용 기계를 이용하여 데이터를 한 번만 저장할 수 있음
+23. 휘발성 메모리로는 DRAM, __, __이 있고 비휘발성 메모리로는 __ 메모리, __가 있다.
+24. __: OS 영역이나 타 프로그램 영역으로 침범하려는 악성 __
+25. __는 경계 레지스터와 __ 레지스터 주소 값 안에서 해당 작업이 이루어지는지 검사하며 만일 두 레지스터의 값을 벗어난다면 __ 오류 관련 신호를 발생시키는데 이 신호를 __라고 부른
+26. __: 컴퓨터를 켰을 때 운영체제를 메모리에 올리는 과정
 
 
 ### 문제
@@ -73,7 +98,33 @@ categories: OS
 
 ### 답변
 
-1.  
+1. Pseudo, 유사, pseudo, 유사, PDL
+2. 산술논리, 데이터, 논리
+3. 오류 수정, 디버그
+4. 제어장치, 레지스터
+5. 데이터
+6. 데이터
+7. 프로그램 카운터
+8. 명령어
+9. 메모리 주소 레지스터(memory address register; MAR)
+10. 메모리 버퍼 레지스터(memory buffer register; MBR)
+11. 데이터 레지스터(data register; DR), 주소 레지스터(address register; AR)
+12. 제어, 메모리, 주변장치, 양
+13. 메모리, 메모리, 주변장치, 단
+14. 데이터, 데이터, 양 
+15. 버스의 대역폭(bandwidth) 
+16. 대역폭, 레지스터, 메모리, 같음
+17. DRAM(Dynamic RAM)
+18. 전력
+19. 클로틱(펄스)
+20. BIOS, firmware, os, rom
+21. 데이터, 없음
+22. PROM(Programmable ROM)
+23. SRAM, SDRAM, 플래시, SSD
+24. 바이러스, S/W
+25. CPU, 한계, 메모리, 인터럽트
+26. 부팅
+ 
 
 
 ### 정답
