--- a/_posts/OS/2024-04-13-OS10.md
+++ b/_posts/OS/2024-04-13-OS10.md
@@ -1,6 +1,6 @@
 ---
 title: "프로세스의 연산"
-date: 2024-04-08
+date: 2024-04-13
 layout: post
 categories: OS
 ---
@@ -84,7 +84,7 @@ categories: OS
 
 # 고아 프로세스와 좀비 프로세스
 - **고아 프로세스(orphan process)**는 부모 프로세스가 먼저 종료되어 돌아갈 곳이 없는 **비정상적으로 남아있는** 프로세스
-- **좀비 프로세스(zombie process)**는 자식 프로세스가 종료되었는데도 부모 프로세스가 **연략받지 못해** 뒤처리르 하지 않아 발생하는 프로세스
+- **좀비 프로세스(zombie process)**는 자식 프로세스가 종료되었는데도 부모 프로세스가 **연락받지 못해** 뒤처리를 하지 않아 발생하는 프로세스
 - C 언어에는 exit() 또는 return()문을 사용해 자식 프로세스의 작업이 끝났음을 부모 프로세스에 알림
 
 
