--- a/_posts/OS/2024-04-13-OS12re.md
+++ b/_posts/OS/2024-04-13-OS12re.md
@@ -1,8 +1,10 @@
+---
 title: "스캐줄링의 개요"
-date: 2024-04-09
+date: 2024-04-13
 categories: OS
 layout: post
 ---
+
 # CPU 스케줄링이란?
 - 어떤 작업에 CPU를 배정할지 결정하는 것
 
@@ -24,9 +26,9 @@ layout: post
 
 ### 고수준 스케줄링 (high level scheduling)
 - 시스템 내의 전체 작업 수를 조절하는 것
-- 어떤 작업으 시스템이 받아들일지 또는 거부할지를 결정
+- 어떤 작업 시스템을 받아들일지 또는 거부할지를 결정
 - 시스템 내에서 동시에 실행 가능한 프로세스의 총 개수가 정해짐
-- **장기 스케줄링** 또는 **작업 스켖줄링**, **승인 스케줄링** 이라고도 부름
+- **장기 스케줄링** 또는 **작업 스케줄링**, **승인 스케줄링** 이라고도 부름 
 
 ### 저수준 스케줄링 (low level scheduling)
 - 어떤 프로세스에 CPU를 할당할지, 어떤 프로세스를 대기 상태로 보낼지 결정
