--- a/_posts/OS_Q/2024-04-11-OS10.md
+++ b/_posts/OS_Q/2024-04-11-OS10.md
@@ -6,8 +6,19 @@ categories: OS
 ---
 ### 문제
 
-1.  
-
+1.  스택 영역은 __가 프로세스를 실행하기 위해 필요한 __를 모아놓은 곳이다
+2. 스택 영역은 프로세스 내에서 __를 호출하면 함수를 수행하고 원래 __으로 되돌아올 위치를 저장하는 곳
+3. __ 시스템 호출은 실행 중인 프로세스와 똑같은 프로세스를 하나 더 만든다, 이때 실행하던 프로세스는 __ 프로세스, 새로 생긴 프로세스는 __ 프로세스로서 둘은 부모-자식 관계가 된다.
+4. fork() 시스템 호출을 하면 프로세스 제어 블록을 (제외한/포함한) 부모 프로세스 영역의 대부분이 자식 프로세스에 복사되어 똑같은 프로세스가 만들어지지만 PCB의 내용중 __, 메모리 관련 정보, __와 __이 변경된다.
+5. fork() 시스템 호출의 장점은 추가 작업 없이 __을 상속할 수 있음
+6. __: 프로세스는 그대로 둔 채 내용만 바꾸는 시스템 호출
+7. exec() 시스템 호출 하면 __ 영역에 있는 기존의 내용을 지우고 새로운 코드로 바꾸고 __ 영역이 새로운 변수로 채워지고 스택 영역이 리셋된다.
+8. exec() 시스템을 호출 하면 PCB의 내용 중 프로세스 구분자, 부모 프로세스 구분자, 자식 프로세스 구분자, 메모리 관련 사항 등은 변하지 않지만 __ 레지스터 값을 비롯한 각종 레지스터와 사용한 __ 정보가 모두 리셋
+9. __의 모든 프로세스는 init프로세스의 자식이 되어 __ 구조를 이룸
+10. 프로세스 계층 구조는 여러 작업을 동시에 처리할 수 있으며 프로세스의 __이 용이하고 __ 회수가 쉽다 
+11. __는 부모 프로세스가 먼저 종료되어 돌아갈 곳이 없는 비정상적으로 남아있는 프로세스
+12. __는 자식 프로세스가 종료되었는데도 부모 프로세스가 연략받지 못해 뒤처리를 하지 않아 발생하는 프로세스
+13. C 언어에는 __ 또는 __ 문을 사용해 자식 프로세스의 작업이 끝났음을 부모 프로세스에 알림
 
 ### 문제
 
@@ -60,8 +71,19 @@ categories: OS
 
 ### 답변
 
-1.  
-
+1. 운영체제, 데이터
+2. 함수, 프로그램 
+3. fork(), 부모, 자식
+4. 포함한, 프로세스 구분자(PID), 부모 프로세스 구분자(PPID), 자식 프로세스 구분자(CPID)
+5. 자원
+6. exec()
+7. 코드, 데이터 
+8. 프로그램 카운터, 파일
+9. 유닉스, 트리
+10. 재사용, 자원
+11. 고아 프로세스(orphan process)
+12. 좀비 프로세스(zombie process)
+13. exit(), return() 
 
 ### 정답
 
