--- a/_posts/OS_Q/2024-04-11-OS7.md
+++ b/_posts/OS_Q/2024-04-11-OS7.md
@@ -6,7 +6,10 @@ categories: OS
 ---
 ### 문제
 
-1.  
+1.  하나의 코어에서 여러 개의 명령어를 동시에 처리하는 것을 __라고 한다.
+2. __란 CPU가 처리할 수 있는 작업의 단위
+3. __의 법칙: CPU 속도가 24개월마다 2배 빨라진다는 법칙
+4. __의 법칙: CPU 속도를 올려도 메모리를 비롯한 __가 CPU 발전 속도를 따라가지 못해 컴퓨터의 전반적인 성능은 저하
 
 ### 문제
 
@@ -49,7 +52,10 @@ categories: OS
 
 ### 답변
 
-1.  
+1. 명령어 병렬 처리
+2. 스레드(thread)
+3. 무어
+4. 암달, 주변장치 
 
 ### 정답
 
