--- a/_posts/OS_Q/2024-04-11-OS8.md
+++ b/_posts/OS_Q/2024-04-11-OS8.md
@@ -6,12 +6,27 @@ categories: OS
 ---
 ### 문제
 
-1. 
-
+1. 운영체제에서 __ 하나의 작업 단위 이다.
+2. __: 저장장치에 저장되어 있는 정적인 상태 
+3. __: 실행을 위해 메모리에 올라온 동적인 상태
+4. 프로세스 제어 블록(PCB Process Control Block)은 프로그램이 __로 전환될 때 __가 만드는 작업 지시서
+5. __에는 프로세스를 처리하는데 필요한 다양한 정보가 들어있으며 대표적으로는 프로세스 구분자(Process IDentification; PID), __관련 정보, 각종 __값이 있다.
+6. 운영체제도 __이기 때문에 프로세스 형태로 실행된다
+7. __이 운영체제 관련 프로세스를 실행한 후 일반 프로세스가 실행된다
+8. 컴퓨터에는 일반 사용자의 __ 프로세스와 운영체제의 __ 프로세스가 섞여서 실행된다
+9. 프로세스의 네 가지 상태로는 __ 상태, __ 상태, __ 상태, __상태 가 있다.
+10. 프로세스의 상태중 __ 상태(terminate status)는 실행 상태의 프로세스가 주어진 시간 동안 작업을 마치면 진입하는 상태를 말하다.
+11. __: 준비 상태에 있는 여러 프로세스 중 다음에 실행할 프로세스를 선정
+12. __: 준비 상태의 프로세스 중 하나를 골라 실행 상태로 바꾸는 CPU 스케줄러의 작업
+13. 타임아웃(time out): 프로세스가 자신에게 주어진 하나의 타임 슬라이스 동안 작업을 끝내지 못해 다시 __ 상태로 돌아가는 것
+14. 대기 상태는 작업 효율을 높이기 위해 만들어진 것으로 __ 라고도 하며 입출력 장치별로 만들어진 __에서 대기함
+15. 활성 상태에는  __ 상태,준비 상태,실행 상태, __ 상태 , 완료 상태 가 있다
+16. 휴식 상태(pause status): 프로세스가 작업을 일시적으로 쉬고 있는 상태.(__에 있음)
+17. 보류 상태(suspend status): 프로세스가 메모리에서 잠시 쫓겨난 상태로 ‘일시 정지 상태’라고도 불림 (__ 영역에 있음)
 
 ### 문제
 
-1.  프로세스와 프로그램의 차이점으로 올바른 설명은?
+1.  프로세스와 프로그램에 대한 설명으로 올바른 설명은?
     
     *   A) 프로그램은 동적인 상태이며, 프로세스는 정적인 상태이다.
     *   B) 프로그램은 메모리에 올라와 실행되는 상태이며, 프로세스는 저장장치에 있는 정적인 상태이다.
@@ -29,7 +44,7 @@ categories: OS
     *   B) 준비 상태
     *   C) 실행 상태
     *   D) 완료 상태
-4.  입출력 작업을 요청하고 완료될 때까지 기다리는 프로세스의 상태는 무엇인가?
+4. 실행상태의 프로세스가 입출력 작업을 요청하고 완료될 때까지 기다리는 프로세스의 상태는 무엇인가?
     
     *   A) 대기 상태
     *   B) 준비 상태
@@ -41,40 +56,17 @@ categories: OS
     *   B) 보류 상태
     *   C) 실행 상태
     *   D) 대기 상태
-
 
 ### 문제
 
-1.  프로세스와 프로그램의 차이점으로 올바른 설명은?
-    
-    *   A) 프로그램은 동적인 상태이며, 프로세스는 정적인 상태이다.
-    *   B) 프로그램은 메모리에 올라와 실행되는 상태이며, 프로세스는 저장장치에 있는 정적인 상태이다.
-    *   C) 프로세스는 메모리에 올라와 실행되는 상태이며, 프로그램은 저장장치에 있는 정적인 상태이다.
-    *   D) 프로세스와 프로그램은 동일한 개념으로 사용된다.
-2.  프로세스 제어 블록(PCB)에 저장되지 않는 정보는?
-    
-    *   A) 프로세스 구분자(PID)
-    *   B) 메모리 관련 정보
-    *   C) 프로세스의 사용자 이름
-    *   D) 각종 중간값
-3.  프로세스의 상태 중 CPU를 얻어 실제 작업을 수행하는 상태는 무엇인가?
-    
-    *   A) 생성 상태
-    *   B) 준비 상태
-    *   C) 실행 상태
-    *   D) 완료 상태
-4.  입출력 작업을 요청하고 완료될 때까지 기다리는 프로세스의 상태는 무엇인가?
-    
-    *   A) 대기 상태
-    *   B) 준비 상태
-    *   C) 보류 상태
-    *   D) 휴식 상태
-5.  메모리에서 일시적으로 쫓겨나 '일시 정지 상태'에 있는 프로세스의 상태는 무엇인가?
-    
-    *   A) 휴식 상태
-    *   B) 보류 상태
-    *   C) 실행 상태
-    *   D) 대기 상태
+66.  프로그램은 저장장치에 저장되어 있는 동적인 상태이다. (O/X)
+67.  프로세스 제어 블록(PCB)은 프로그램이 프로세스로 전환될 때 만들어지는 작업 지시서이다. (O/X)
+68.  준비 상태의 프로세스는 CPU를 얻어 실제 작업을 수행하는 상태이다. (O/X)
+69.  타임아웃은 프로세스가 주어진 시간 동안 작업을 마치면 진입하는 상태이다. (O/X)
+70.  대기 상태는 실행 상태의 프로세스가 입출력을 요청하고 입출력이 완료될 때까지 기다리는 상태이다. (O/X)
+71.  휴식 상태는 프로세스가 작업을 일시적으로 쉬고 있는 상태로, 메모리 밖에서 발생한다. (O/X)
+72.  보류 상태는 프로세스가 메모리에서 잠시 쫓겨난 상태로, 일시 정지 상태라고도 불린다. (O/X)
+
 
 
 
@@ -83,7 +75,23 @@ categories: OS
 
 ### 답변
 
-1.  
+1. 프로세스
+2. 프로그램
+3. 프로세스
+4. 프로세스, 운영체제
+5. PCB, 메모리, 중간
+6. 프로그램
+7. 부트스트랩
+8. 사용자, 커널
+9. 생성, 준비, 실행, 완료
+10.  완료 
+11. CPU 스케줄러(CPU scheduler)
+12. 디스패치(dispatch)
+13. 준비
+14. wait status, 큐
+15. 생성, 대기
+16. 메모리
+17. swap
 
 
 ### 정답
@@ -94,13 +102,14 @@ categories: OS
 4.  A) 대기 상태
 5.  B) 보류 상태
 
-### 정답
-
-1.  C) 프로세스는 메모리에 올라와 실행되는 상태이며, 프로그램은 저장장치에 있는 정적인 상태이다.
-2.  C) 프로세스의 사용자 이름
-3.  C) 실행 상태
-4.  A) 대기 상태
-5.  B) 보류 상태
 
 
+### 답변
 
+66.  X (프로그램은 저장장치에 저장되어 있는 **정적인** 상태이다.)
+67.  O (프로세스 제어 블록(PCB)은 프로그램이 프로세스로 전환될 때 만들어지는 작업 지시서이다.)
+68.  X (준비 상태의 프로세스는 CPU를 얻을 때까지 기다리는 상태이다. CPU를 얻어 실제 작업을 수행하는 상태는 **실행 상태**이다.)
+69.  X (타임아웃은 프로세스가 자신에게 주어진 하나의 타임 슬라이스 동안 작업을 끝내지 못해 다시 준비 상태로 돌아가는 것이다.)
+70.  O (대기 상태는 실행 상태의 프로세스가 입출력을 요청하고 입출력이 완료될 때까지 기다리는 상태이다.)
+71.  X (휴식 상태는 프로세스가 작업을 일시적으로 쉬고 있는 상태로, **메모리에 있음**을 의미한다.)
+72.  O (보류 상태는 프로세스가 메모리에서 잠시 쫓겨난 상태로, 일시 정지 상태라고도 불린다.)
