--- a/_posts/cloud/2024-03-31-cloud.md
+++ b/_posts/cloud/2024-03-31-cloud.md
@@ -125,7 +125,7 @@ categories: 클라우드_컴퓨팅
                 - 대규모 데이터 센터에서 이뤄진다
     ![3-tier structure](/assets/cloudimg/3-tier structure.png)
     - 장점
-        - 빠른 응답 속도: 데이터를 ㅁ너 거리의 서버까지 보내고 처리하는 과정을 없애므로 응답 속도가 크게 향상
+        - 빠른 응답 속도: 데이터를 먼 거리의 서버까지 보내고 처리하는 과정을 없애므로 응답 속도가 크게 향상
         - 대역폭 절약: 데이터를 서버까지 전송하는 데 필요한 대역폭을 줄일 수 있음
         - 데이터 보안 강화: 데이터를 외부로 보내지 않고 장치 내에서 처리하기 때문에 데이터 보안을 강화
         - 연결성 확보: 인터넷 연결이 불안정한 환경에서도 뎅이터 처리가 가능
