--- a/_posts/cloud/2024-04-06-cloud6.md
+++ b/_posts/cloud/2024-04-06-cloud6.md
@@ -1,40 +1,43 @@
 ---
-title: "클라우드 이전"
+title: "테넌트"
 date: 2024-04-06
 layout: post
 categories: 클라우드_컴퓨팅
 ---
-# 7가지 마이그레이션 전략
-- 애플리케이션을 클라우드로 이전하는 데 있어 일반적으로 사요오디는 일곱 가지 전략
-    1. 리팩터/리아키텍트(Refactor/re-architect)
-        - 애플리케이션의 기본 구조를 변경하면서 클라우드로 이전하는 전략
-        - 클라우드의 기능을 최대한 활용하기 위해 애플리케이션을 근본적으로 재설계
-        - 선능, 확장성, 유연성을 개선하기 위해 애플리케이션의 코드를 수정하고, 클라우드 네이티브 서비스(ex: 서버리스 컴퓨팅, 마이크로서비스 아키텍처)를 활용하는 과정을 포함
-        - 많은 시간과 자원이 필요하지만, 장기적으로는 운영 비용 절감과 기술적 이점을 제공
-    2. 리플랫폼(Replatform, 도는 lift and reshape)
-        - 애플리케이션을 클라우드로 이전하면서 일부 최적화를 수행하는 전략
-        - 리팩터/리아키텍처와 달리 애플리케이션의 기본 구조나 코드를 대대적으로 변경하지는 않음
-        - 클라우드의 특정 기능을 활용하여 애플리케이션의 성능이나 관리 용이성을 개선
-        - e.g. 데이터베이스를 관리형 클라우드 서비스로 이전
-        - 클라우드에서 더 효율적으로 작동하는 스토리지 솔루션을 사용하는 것이 포함될 수 있음
-    3. 리퍼처스 (Repurchase, 또는 drop and shop)
-        - 기존에 사용하던 소프트웨어 또는 시스템을 버리고(드롭), 클라우드 기반의 새로운 제품이나 서비스로 전환(샵)하는 전략임. 다른 제품으로 전환하는 것을 의미함.
-        - 일반적으로 전통적인 라이센스에서 SaaS(서비스로서의 소프트웨어) 모델로 이동하는 것을 포함함.
-        - e.g. 고객 관계 관리(CRM) 시스템을 Salesforce.com으로 마이그레이션
-        - 최신 클라우드 서비스의 혜택을 누릴 수 있으며, 유지보수와 인프라 관리 부담이 줄어들지만, 새 시스템으로의 전환 비용과 학습 곡선이 있을 수 있음.
-    4. 리호스트(Rehost, 또는 lift and shift)
-        - 애플리케이션을 그대로 클라우드로 이동하는 가장 단순한 형태의 마이그레이션 전략임
-        - 기존 애플리케이션을 그대로 클라우드 인프라로 옮기며 (lift)전략으로, 큰 변경 없이 신속하게 클라우드 환경으로 이전함 (shift)
-        - e.g. 온프레미스 오라클 데이터베이스를 AWS 클라우드의 EC2 인스턴스에서 실행되는 오라클 데이터베이스로 마이그레이션
-        - 마이그레이션을 신속하게 완료하려는 기업에게 비용 효율적이고 간단하게 적용 가능함.
-    5. 리로케이트(Relocate, 또는 hypervisor-level lift and shift)
-        - 하이퍼바이저 레벨에서의 워크로드 이동을 가능하게 하는 클라우드 서비스를 사용할때 가능한 전략
-        - 기존의 가상화 환경을 클라우드로 직접 이전할 수 있도록 하여 새로운 하드웨어를 구매하거나, 애플리케이션을 재작성하거나, 기존 운영 방식을 변경할 필요가 없음
-    6. 리테인(Retain, 또는 revisit)
-        - 특정 애플리케이션을 클라우드로 이전하지 않고 현재 환경에 그대로 두기로 결정하는 것을 의미함.
-        - 리팩터링이나 마이그레이션이 기술적으로 복잡하거나 비용적으로 비효율적인 경우, 또는 애플리케이션이 비즈니스 요구에 맞춰 충분히 잘 작동하는 경우 서낵될 수 있음
-        - 나중에 다시 검토할 애플리케이션을 대상으로 할 수 있으며, 마이그레이션 우선 순위에서 후순위로 미루는 경우에 사용됨
-    7. 리타이어(Retire)
-        - 클라우드 마이그레이션 과정에서 더 이상 필요하지 않거나 사용되지 않는 애플리케이션을 식별하여 폐기하는 것을 의미함.
-        - 클라우드 전환 시, 조직은 IT자산을 면밀히 검토
-            - 비즈니스 가치가 없거나 사용되지 않는 애플리케이션을 찾아내어 폐기(리타이어)함으로써 운영 비용과 보안 위험을 줄이며 클라우드 마이그레이션의 범위와 복잡성을 낮출 수 있음
+# 테넌트와 멀티 테넌트
+![tenant and multi-tenant](/assets/cloudimg/tenant.png)
+<hr>
+![tenant and multi-tenant](/assets/cloudimg/tenant2.png)
+<hr>
+![tenant and multi-tenant](/assets/cloudimg/tenant3.png)
+<hr>
+
+### 테넌트(Tenant)
+- 클라우드 컴퓨팅에서 독립된 고객이나 사용자 그룹을 의미
+- 각 테넌트는 가상 자원을 할당받아 사용
+- 각 테넌트는 다른 테넌트와 격리 및 자신만의 자원을 보유함
+
+### 멀티 테넌트(Multi-tenant)/멀티 테넌시(Multi-tenancy)
+- 하나의 물리적 클라우드 시스템에서 다수의 테넌트가 동시에 사용할 수 있는 구조
+- 다수의 테넌트가 하나의 클라우드 시스템을 공유함
+![tenant and multi-tenant](/assets/cloudimg/tenant4.png)
+
+### 멀티 테넌시의 장점
+- 고객마다 새로운 시스템을 만들 필요가 없기 때문에 소프트웨어 개발과 유지보수 비용을 공유할수 있어서 경제적
+- 같은 소프트웨어를 사용해도 사용자 혹은 기업 고객별로 메튜 구성과 디자인 등을 완전히 다른 현태로 구성할 수 있음
+
+### 멀티 테넌시 구현 시 유의사항
+- 개인화를 지원하기 위해서는 더 정교한 멀티테넌시 아키텍처를 적용해야 함. -> 상당한 비용과 인력이 필요
+- 업데이트 과정에서 자칫 버그나 장애가 발생하면 모든 사용자가 공통으로 장애를 겪을 수 있는 위험성 존재
+- 일부 사용자에게 유용한 업데이트가 다른 사용자에게는 오히려 불편함을 유발할 수도 있음.
+- 각 테넌트 별로 서비스에 영향이 없도록 해야함
+
+### 멀티 테넌트의 요건
+- 격리성(isolation): 각각의 테넌트는 서로 독립적인 공간에서 서비스를 받아야 함, 데이터 및 서비스에 대한 접근 제어 및 결리가 필요.
+- 확장성(scalability): 다수의 테넌트를 지원하고, 새로운 테넌트의 추가나 기존 테넌트의 서비스 이용량 증가에 대해 빠르게 대응해야 함.
+- 커스터마이징(cusomization): 각각의 테넌트는 서로 다른 요구사항을 갖을 수 있음. 테넌트마다 서로 다른 설정이 가능하도록 하는 기능이나 API를 제공 필요
+- 보안성(security): 각각의 테넌트가 서로 다른 보안 요구사항을 가질 수 있음. 테넌트 간의 보안 분리 및 접근 제어, 암호화 등이 필요
+- 성능(performance): 다수의 테넌트가 동시에 사용하기 때문에 발생하는 성능저하(자원 공유, 다수 요청에의한 부하)를 해결해야함.
+- 모니터링 및 로깅(monitoring and logging): 각각의 테넌트의 상태를 모니터링하고 로깅
+- 유지보수(maintenance): 테넌트별 자동화된 유지보수 기능이나 웹 인터페이스를 제공 필요
+*멀티 테넌시를 구현하기 위해 가상화를 사용*
