--- a/_posts/OS/2024-04-07-OS8.md
+++ b/_posts/OS/2024-04-07-OS8.md
@@ -5,12 +5,12 @@ layout: post
 categories: OS
 ---
 # 프로세스의 개념
-- **운영체제에서 프로세는 하나의 작업 단위 이다.**
-- 프로그램
+- **운영체제에서 프로세스는 하나의 작업 단위 이다.**
+- 프로그램 
     - **저장장치에** 저장되어 있는 정적인 상태 (**프로그램을 짠다**)
 
 - 프로세스
-    - 실행을 윟 **메모리에** 올라온 동적인 상태 (**프로세스를 실행한다**)
+    - 실행을 위해 **메모리에** 올라온 동적인 상태 (**프로세스를 실행한다**)
 ![program and process](/assets/osimg/program_and_process.png)
 
 ### 요리사 모형으로 비유하는 프로세스
@@ -53,11 +53,11 @@ categories: OS
 *프로그램 =프로세스 - 프로세스 제어 블록*
 
 # 프로세스의 네 가지 상태
-- 생성 상태(create status): 프롯스가 메모리에 올라와 실행 준비를 완료한 상태.
+- **생성 상태(create status)**: 프로세스가 메모리에 올라와 실행 준비를 완료한 상태.
     - 프로세스 제어 블록 생성
-- 준비 상태(ready status): 생성된 프로세스가 CPU를 얻을 때까지 기다리는 상태
-- 실행 상태(running status): 준비 상태에 있는 프로세스 중 하나가 CPU를 얻어 실제 작업을 수행하는 상태. execute status 라고도 함.
-- 완료 상태(terminate status): 실행 상태의 프로세스가 주어진 시간 동안 작업을 마치면 진입하는 상태.
+- **준비 상태(ready status)**: 생성된 프로세스가 CPU를 얻을 때까지 기다리는 상태
+- **실행 상태(running status)**: 준비 상태에 있는 프로세스 중 하나가 CPU를 얻어 실제 작업을 수행하는 상태. execute status 라고도 함.
+- **완료 상태(terminate status)**: 실행 상태의 프로세스가 주어진 시간 동안 작업을 마치면 진입하는 상태.
     - 프로세스 제어 블록 사라짐
 ![four state of process](/assets/osimg/state_of_process.png)
 - CPU 스케줄러(CPU scheduler): 준비 상태에 있는 여러 프로세스 중 다음에 실행할 프로세스를 선정
