--- a/_posts/OS/2024-04-08-OS7.md
+++ b/_posts/OS/2024-04-08-OS7.md
@@ -22,7 +22,7 @@ categories: OS
 ### CPU 관련 통용 법칙
 1. 무어의 법칙(Moore's law)
     - CPU 속도가 24개월마다 2배 빨라진다는 법칙
-    - 요즘에는 CPU 철리 속도를 올리는 대신 멀티코어를 장착해 CPU를 여러 개 사용하는 것과 같은 효과를 얻음
+    - 요즘에는 CPU 처리 속도를 올리는 대신 멀티코어를 장착해 CPU를 여러 개 사용하는 것과 같은 효과를 얻음
     - 하나의 코어에서 여러 개의 명령어를 동시에 실행하는 멀티스레드 기술도 많이 사용
 
 2. 암달의 법칙(Amdahl's law)
