--- a/_posts/OS/2024-04-13-OS13re.md
+++ b/_posts/OS/2024-04-13-OS13re.md
@@ -1,6 +1,6 @@
 ---
 title: "스케줄링 시 고려사항"
-date: 2024-04-11
+date: 2024-04-13
 categories: OS
 layout: post
 ---
@@ -8,13 +8,13 @@ layout: post
 - 뺏을 수 있으면 선점형 스케줄링
 - 점령형, 비점령형 ( 강점형, 비감점형)
 - 운영체제가 필요하다고 판단하면 실행 상태에 있는 프로세스의 작업을 중단시키고 새로운 작업을 시작할 수 있는 방식
-- 대화형 시스템이나 시분할 시스템에 저갑
+- 대화형 시스템이나 시분할 시스템에 적합 
 - 대부분의 저수준 스케줄러는 선점형 스케줄러 방식 사용
 - 해당 프로세스의 중요도 높음
 
 # 비선점형 스케줄링
 - 못뺏으면 비선점형
-- 어떤 프로세스가 실행 상태에 들어가 CPU를 사용하면 그 프로세스가 종료되거나 자발적으로 대기 상태에 들어가기 전까지는 계쏙 실행되는 방식
+- 어떤 프로세스가 실행 상태에 들어가 CPU를 사용하면 그 프로세스가 종료되거나 자발적으로 대기 상태에 들어가기 전까지는 계속 실행되는 방식
 - 선점형 스케줄링보다 스케줄러의 작업량이 적고 문맥 교환에 의한 낭비(오버헤드)도 적음 
 - CPU 사용 시간이 긴 프로세스 때문에 CPU 사용 시간이 짧은 여러 프로세스가 오랫동안 기다리게 되어 전체 시스템의 처리율이 떨어짐
 - 과거의 일괄 작업 시스템에서 사용하던 방식
@@ -30,7 +30,7 @@ layout: post
 - 수학 연산과 같이 CPU를 많이 사용하는 프로세스로 CPU 버스트(CPU burst)가 많은 프로세스
 
 # 입출력 집중 프로세스
-- 저장장치에서 데이터를 복사하는 일과 같이 이불력을 많이 사용하는 프로세스로 입출력 버스트(I/O burst)가 많은 프로세스
+- 저장장치에서 데이터를 복사하는 일과 같이 입출력을 많이 사용하는 프로세스로 입출력 버스트(I/O burst)가 많은 프로세스
 ![cpu_burst](/assets/osimg/cpu_burst.png)
 
 # 우선 배정
@@ -40,12 +40,12 @@ layout: post
 # 전면 프로세스와 후면 프로세스
 
 ### 전면 프로세스
-- GUI를 사용하는 운영체제에서 화면ㅇ의 맨 앞에 높인 프로세스
+- GUI를 사용하는 운영체제에서 화면의 맨 앞에 높인 프로세스
 - 현재 입력과 출력을 사용하는 프로세스
 - 사용자와 상호작용이 가능하여 상호작용 프로세스라고도 함
 
 ### 후면 프로세스
-- 사용자와 상호작용이 없은 플로세스
+- 사용자와 상호작용이 없은 프로세스
 - 사용자의 입력 없이 작동하기 때문에 **일괄 작업 프로세스**라고도 함
 - 전면 프로세스의 우서눈위가 후면 프로세스보다 높음
 
