--- a/_posts/OS/2024-04-13-OS14.md
+++ b/_posts/OS/2024-04-13-OS14.md
@@ -5,8 +5,8 @@ categories: OS
 layout: post
 ---
 # 준비 상태의 다중 큐(multiple queue)
-- 프로세스는 준비 상태에 들어올 때마다 **자신의 우선순위**에 해당하는 큐의 마지막(tail)에 삽입
-- CPU 스케줄러는 우선순위가 가장 높음 큐(0번 큐)의 맨 앞에 있는 플세스 6에 CPU 할당
+- 프로세스는 준비 상태에 들어올 때마다 **자신의 우선순위**에 해당하는 큐의 마지막(tail)에 삽입 (First -In -First -Out)
+- CPU 스케줄러는 우선순위가 가장 높은 큐(0번 큐)의 맨 앞에 있는 프로세스 6에 CPU 할당
 ![multiple queue](/assets/osimg/multiple_queue.png)
 
 # 프로세스의 우선순위를 배정하는 방식
@@ -19,7 +19,7 @@ layout: post
     - 구현하기 어렵지만 시스템의 효율성을 높일 수 있음
 
 # 대기 상태의 다중 큐
-- 시스템의 효율을 높이기 위해 같은 입출력을 요구한 프로세스끼리 모아 놓음
+- 시스템의 효율을 높이기 위해 같은 입출력을 요구하는 프로세스끼리 모아 놓음
 ![temp](/assets/osimg/temp.png)
 
 ### 다중 큐 비교
