--- a/_posts/OS_Q/2024-04-11-OS11.md
+++ b/_posts/OS_Q/2024-04-11-OS11.md
@@ -6,7 +6,16 @@ layout: post
 ---
 ### 문제
 
-1.  
+1. CPU 입장에서의 작업 단위는 __ 
+2. 일의 크기는 job(작업) > __ > 스레드
+3. __는 프로세스의 코드에 정의된 절차에 따라 CPU에 작업 요청을 하는 실행 단위
+4. __: 프로세스 내 작업을 여러 개의 스레드로 분할하는 프로세스 운영 기법
+5. __(heavy process): 운영체제가 CPU에 작업을 줄 때 시간을 잘게 나누어 배분하여 작업 부담을 줄이는 기법
+6. __: 운영체제가 CPU를 여러 개 사용하여 여러 개의 스레드를 동시에 처리하는 작업 환경 
+7. __: 한 번에 하나씩 처리해야 하는 스레드를 작은 단위의 스레드로 분할하여 운영하는 기법
+8. 멀티스레드의 장점으로는 __ 향상, __ 공유, 효율성 향상, __ 지원이 있다. 
+
+
 
 
 
@@ -46,7 +55,14 @@ layout: post
 
 ### 답변
 
-1.  
+1. 스레드
+2. task(process)
+3. 스레드
+4. 멀티스레드
+5. 멀티태스킹
+6. 멀티프로세싱
+7. CPU 멀티스레드
+8. 응답성, 자원, 다중 CPU
 
 
 
