--- a/_posts/OS_Q/2024-04-11-OS6.md
+++ b/_posts/OS_Q/2024-04-11-OS6.md
@@ -6,8 +6,39 @@ categories: OS
 ---
 ### 문제
 
-1.  
+1. __ : 속도에 차이가 있는 두 장치 사이에서 그 차이를 완화하는 역할을 하는 장치( 메모리 내 임시 공간)
+2. __에 메모리 __가 있음
+3. 버퍼가 __에서 사용되는 예: 동영상 스트리밍
+4. __ 버퍼 : C 언어의 출력문인 print(“hello \n”)에서 \n은 줄바꿈의 의미도 있지만 버퍼에 저장된 내용을 출력하라는 의미도 있다
+5. __: CPU와 입출력장치가 (종속/독립)적으로 동작하도록 고안된 (소프트웨어/하드웨어)적인 버퍼
+6. __: 인쇄할 내용을 순차적으로 출력하는 소프트웨어로 출력 명령을 내린 프로그램과 독립적으로 동작
+7. __ 이론 (locality theory): 현재 위치에 가까운 데이터가 멀리 있는 데이터보다 사용될 확률이 (높다/낮다)
+8. __ 쓰기: 캐시에 있는 데이터가 변경되면 이를 즉시 메모리에 반영하는 것이 아니라 변경된 내용을 모아서 주기적으로 반영하는 방식
+__이라고도 함
+9. 일반 캐시: 메모리와 연결되기 때문에 __캐시라고 부름
+10. 특수 캐시: __에 직접 연결되므로 L1(Level 1)캐시라고 부름
+11. __ 방식: CPU가 직접 입출력장치에서 데이터를 가져오거나 내보내는 방식
+12. __ 방식: 입출력 관리자가 대신 입출력을 해주는 방식
+13. 인터럽트 방식의 동작 과정은, 1. __ 요청, 2. __ 전송,3 __ 발생
+14. 인터럽트가 발생하면 __는 하던 일을 중단하고 옮겨진 데이터를 처리한다
+15. 인터럽트는 입출력 작업 완료시, __ 전원 버튼을 눌러서 강제 종료시, 실행중인 어떤 작업이 자신에게 주어진 메모리 영역을 넘어설 때 , _으로 숫자를 나눌 때 발생한
+16. __ 메모리 접근: 입출력 관리자가 CPU의 허락 없이 메모리에 접근할 수 있는 권한
+17. CPU와 직접 메모리 접근이 동시에 메모리에 접근하면 보통 __가 메모리 사용 권한을 양보
+18. CPU의 작업 속도보다 입출력장치의 속도가 (빠르기/느리기) 떄문에 직접 메모리 접근에 양보하는 것으로, 이러한 상황을 __ 훔치기라고 함
+19. __는 여러 개의 입출력 작업을 한꺼번에 처리하기 위해 여러 개의 인터럽트를 하나의 배열로 만든 것
 
+### 문제
+
+51.  버퍼는 빠른 속도의 장치만을 위한 메모리 내 임시 공간이다. (O/X)
+52.  스풀은 CPU와 입출력장치 사이의 속도 차이를 완화하기 위한 하드웨어적인 버퍼이다. (O/X)
+53.  캐시 메모리는 데이터 전송의 효율성을 높이기 위해 메모리와 CPU 사이에 위치한다. (O/X)
+54.  캐시 적중률은 일반적으로 90% 이상이다. (O/X)
+55.  즉시 쓰기(write through) 방식은 메모리와 캐시 사이의 데이터 전송 횟수를 줄여 성능을 향상시킨다. (O/X)
+56.  L1 캐시는 CPU 레지스터에 직접 연결되어 있어 L2 캐시보다 속도가 느리다. (O/X)
+57.  폴링 방식에서는 CPU가 직접 모든 입출력을 처리한다. (O/X)
+58.  인터럽트 방식에서는 데이터의 입출력이 이루어지는 동안 CPU가 다른 작업을 할 수 없다. (O/X)
+59.  직접 메모리 접근(DMA)은 입출력 관리자가 CPU의 허락 없이 메모리에 접근할 수 있도록 하는 권한이다. (O/X)
+60.  사이클 훔치기는 CPU가 메모리 사용 권한을 입출력 관리자에게 양보하는 현상을 말한다. (O/X)
 
 ### 문제
 
@@ -44,13 +75,29 @@ categories: OS
 
 
 
-
 <hr>
 
 ### 답변
 
-1.  
-
+1. 버퍼
+2. 하드디스크, 버퍼
+3. 소프트웨어
+4. 모니터
+5. 스풀 ,독립, 소프트웨어
+6. 스풀러
+7. 지역성, 높다
+8. 지연, 카피백(copy back)
+9. L2
+10. cpu 레지스터
+11. 플링
+12. 인터럽트
+13. 입출력, 데이터, 인터럽트
+14. CPU
+15. 컴퓨터, 0
+16. 직접
+17. CPU
+18. 느리기, 사이클
+19. 인터럽트 백터 
 
 ### 정답
 
