--- a/_posts/OS_Q/2024-04-11-OS9.md
+++ b/_posts/OS_Q/2024-04-11-OS9.md
@@ -6,7 +6,10 @@ categories: OS
 ---
 ### 문제
 
-1.  
+1.  프로세스는 고유의 프로세스 __ 블록을 가짐
+2. PCB의 __는 준비 상태나 대기 상태의 큐를 구현할 때 사용
+3. PCB의 부모 프로세스 구분자와 자식 프로세스 구분자는 부모 프로세스를 가리키는 __와 자식 프로세스를 가리키는 __ 정보를 나타낸다 
+4. 문맥 교환의 의미는 두 프로세스의 __를 교환하는 작업
 
 ### 문제
 
@@ -16,12 +19,12 @@ categories: OS
     *   B) 프로세스 상태
     *   C) 프로세스 구분자
     *   D) 각종 레지스터 정보
-2.  문맥 교환(context switch)이 발생하는 상황은 언제인가요?
+2.  문맥 교환(context switch)이 발생하는 상황을 모두 고르시오 
     
     *   A) 프로세스가 입출력 작업을 요청할 때
     *   B) 프로세스가 종료될 때
     *   C) 새로운 프로세스가 CPU를 차지할 준비가 될 때
-    *   D) 모든 위의 상황
+    
 3.  타임 슬라이스(time slice)의 크기 설정에 있어서 중요한 고려 사항은 무엇인가요?
     
     *   A) 가능한 한 크게 설정하여 문맥 교환을 줄인다.
@@ -52,13 +55,16 @@ categories: OS
 
 ### 답변
 
-1.  
+1. 제어
+2. 포인터
+3. PPID, CPID  
+4. PCB
 
 
 ### 정답
 
 1.  A) 프로세스의 운영 체제 버전
-2.  D) 모든 위의 상황
+2.  A),B),C)
 3.  B) 문맥 교환에 걸리는 시간을 고려하여 적당한 크기로 설정한다.
 4.  C) 프로세스의 실행 순서를 결정한다.
 
