--- a/_posts/cloud/2024-04-05-cloud3.md
+++ b/_posts/cloud/2024-04-05-cloud3.md
@@ -1,161 +1,205 @@
 ---
 layout: post
-title: "클라우드 컴퓨팅의 정의"
-date: 2024-04-05
+title: "클라우드 컴퓨팅의 서비스 모델"
+date: 2024-04-06
 categories: 클라우드_컴퓨팅
 ---
-# NIST의  Cloud Computing 정의
-1. 어디에서나 접근 가능하고 편리하며 공유되고 있는 컴퓨팅 자원에 접근 가능한 주문형 네트워크 모델
-2. 컴퓨팅 자원은 공급자와 최소한의 관리 노력으로 빠르게 공급되고 출시된다
-3. 클라우드 모델을 5 가지 필수 특성과 세 가지의 서비스 모델 그리고 4개의 배포모델로 구성된다.
+# IT 인프라 
+![IT infra](/assets/cloudimg/IT_infra.png)  
+- 기업이나 조직에서 IT 서비스를 제공, 관리, 운영하기 위한 기술 및 논리적/물리적 자원의 집합
+- IT 인프라에서는 각 계층별로 역할이 존재함.
+- 일반적으로 하위 계층이 있어야 상위 계층의 기능이 제대로 수행될 수 있음
 
-### 다섯 가지의 필수 특성
-1. On-demand self -service
-2. Broad network access
-3. Resource pooling
-4. Rapid elasticity
-5. Measured service
+# IT 인프라 요소들
+- **네트워크**(데이터 전송을 가능하게 하는 물리적 및 논리적 연결 구성)
+    - 라우터, 스위치, 방화벽, 네트워크 연결 등
+    - 직접 관리 범위: 네트워크 하드웨어와 스프트웨어의 구성과 유지 관리
+- **스토리지**(데이터를 디지털 형태로 저장하기 위한공간)
+    - 하드 드라이브,SSD.네트워크 연결 스토리지(NAN), 스토리지 클러스터 등
+    - 직접 관리 범위: 스토리지 하드웨어의 구매 및 설정, 데이터 관리 및 백업
+- **서버**(애플리케이션과 서비스를 위한 컴퓨팅 파워를 제공하는 물리적/가상 시스템)
+    - 웹 서버, 데이터베이스 서버, 가상 머신 등
+    - 직접 관리 범위: 서버 하드웨어의 선택과 설정
+- **가상화**(물리적 자원을 여러 영 체제나 애플리케이션 간에 분할 및 공유)
+    - VMWare, Xen, Hyper-V, KVM와 같은 가상화 플랫폼 등
+    - 직접 관리 범위: 가상화 소프트웨어의 설치와 구성, 가상 머신의 생성과 관리
+- **운영체제**(하드웨어와 사용자 간의 인터페이스 역할)
+    - Windows Server,Linux,Unix 등
+    - 직접 관리 범위: 운영 체제의 설치와 유지 보수, 업데이트와 패치 적용
 
-### 세 개의 서비스 모델
-1. Software as a Service(SaaS)
-2. Platform as a Service(PaaS)
-3. Infrastructure as a Service(IaaS)
+# IT 인프라 요소들
+- **미들웨어**(운영 체제에 없는 서비스와 기능을 애플리케이션에 제공하는 소프트웨어)
+    - 웹 서버, 메시지 큐, 데이터베이스 관리 시스템(DBMS) 등
+    - 직접 관리 범위: 미들웨어 스프트웨어의 선택과 구성, 업데이트와 유지 보수
+- **런타임**(애플리케이션이 실행될 때 필요한 라이브러리/프레임워크를 제공하는 실행 환경)
+    - Java Runtime Environment(JRE), .NET Framework, Node.js 등
+    - 직접 관리 범위: 런타ㅣㅁ 환경의 설치/구성, 애플리케이션의 실행과 호환성 유지 관리
+- **데이터**(애플리케이션의 작동에 필요한 정보나 내용이 구조화된 형태)
+    - 데이터베이스, 파일 등
+    - 직접 관리 범위: 데이터 구조 설계, 저장, 검색, 백업, 보안 정책 구현 등
+- **애플리케이션**(사용자가 특정 작업을 수행하기 위해 사용하는 소프트웨어)
+    - 웹사이트, 모바일 앱, 기업용 소프트웨어 등
+    - 직접 관리 범위: 애플리케이션의 개발, 배포, 업데이트, 스케일링 및 성능 최적화 등
 
-### 네 가지 배포 모델
-1. Private cloud
-2. Community cloud
-3. Public cloud
-4. Hybrid cloud
+# Cloud Computing의 서비스 모델
+- Software as as Service (SaaS)
+- Platform as a Service (PaaS)
+- infrastructure as a Service (IaaS)
+![service](/assets/cloudimg/maintenance.png)
 
-### ubiquitous
-- 사용자는 인터넷에 연결되어 있는 어떤 장소이든지 클라우드 컴퓨팅을 이용할 수 있음
+### Infrastucture as a Service (IaaS)
+- 사용자가 필요한 만큼 컴퓨팅 리소스를 프로비저닝할 수 있는 모델
+- 사용자는 클라우드 인프라 상에서 운영 체제, 어플리케이션, 스토리지, 네트워크 등을 관리
+- 클라우드 서비스 제공자는 물리적인 인프라를 유지, 관리하며 가상 서버와 네트워크 등의 리소스를 제공
+- 공간 대여로 비유할 수 있음
+    - ex) 
+        - Amazon Elastic Compute Cloud of AWS 
+        - Virtual Machines of Microsoft Azure
+        - Compute Engine of Google Cloud Platform
 
-### convenient
-- 필요한 컴퓨팅 자원을 빠르게 요청하고 사용할 수 있으며 복잡한 설정이 관리 없이 쉽게 이용 가능
-- 별도의 설치나 다운로드 없이 웹 브라우저만 있으면 언제든 이용 가능
-- 필요에 따라 자동으로 스케일링되어 자원을 확장 또는 축소 가능
-    - 자원 낭비 최소화 및 비용절감
-- 사용자가 별도의 시스템 구축, 유지보수, 업그레이드 등의 작업을 수행하지 않아도 됨
+### Platform as a Service (Paas)
+- 개발자가 애플리케이션을 개발, 실행, 관리하기 위한 플랫폼을 제공하는 모델
+- 개발자는 클라우드 상에서 필요한 애플리케이션을 구축하고 배포함
+- 클라우드 서비스 제공자는 물리적인 인프라와 운영체제를 관리함
+- 부엌 대여로 비유 가능
+    - ex)
+        - Amazon Web Service
+            - AWS Elastic Beanstalk: 개발자가 애플리케이션을 간단하게 배포할 수 있도록 지원
+            - AWS App Runner: 개발자가 코드를 업로드하면, 자동으로 애플리케이션을 빌드하고 배포
+        - Microsoft Azure
+            - Azure App Service: 웹 애플리케이션 및 모바일 애플리케이션을 빌드, 배포, 관리
+        - Google Cloud Platform
+            - Google App Engine: 개발자가 코드를 업로드하면, 자동으로 애플리케이션을 빌드하고 배포
 
-# on-premise
-- 회사나 조직 내부에 IT 인프라를 직접 구축하고 운영하는 방식
-![on-premise](/assets/cloudimg/on-premise.png)
-- 클라우드 이전의 일반적인 방식 = 전산실
-- 장점
-    1. 보안과 프라이버시 관리를 용이
-    2. 특정한 요구사항에 따라 맞춤형 시스템을 만들 수 있음
-- 단점
-    1. 초기 비용 및 유지보수 비용이 높음
-    2. 자원 할당 및 확장의어려움
-    3. 대처(자연재해, 장애, 보안) 능력의 한계
-    4. 유지보수와 업그레이드의 복잡성
+### Sfotware as a Service (SaaS)
+- 소프트웨어를 사용하는 기업이나 개인에게 클라우드를 통해 소프트웨어를 제공하는 모델
+- 사용자는 서비스 제공 업체가 제공하는 소프트웨어를 웹 브라우저와 같은 접근하기 쉬운 클라이언트를 통해 사용
+- SaaS는 일반적으로 사용자가 별도로 설치하거나 설정할 필요가 없으므로, 즉시 사용 가능
+- 음식 체인점으로 비유 가능
+    - ex) 
+        - Amazon Web Services
+            - Amazon WorkMail: 기업용 이메일 서비스
+            - Amazon Chime: 비디오 및 음성 회의 서비스
+        
+        - Microsoft Azure
+            - Microsoft Office 365: 워드, 엑셀, 파워포인트 등의 오피스 소프트웨어를 클라우드에서 제공하는 서비스
+            - Microsoft Dynamics 365: ERP 및 CRM 등의 비즈니스 애플리케이션을 클라우드에서 제공하려는 서비스
+        
+        - Google Cloud Platform
+            - Google Workspace: 워드, 스프레드시트, 프레젠테이션 등의 오피스 소프트웨어를 클라우드에서 제공하는 서비스
+            - Google Meet: 비디오 및 음성 회의 서비스
 
-### 온프라미스에 서비스 구축 과정
-1. 서버 구매 및 설치
-    - 어떤 종류의 서버를 구매할지 결정
-        - 제조사와 제품(성능, 가격, 지원 등) 비교 평가
-    - 구매 프로세스 진행: 발주, 결제, 수령
-    - 물리적인 서버를 배치
-        - Rack에 설치 + 공간 확보
-        - 네트워크 및 전원 선 정리
-        - 네트워크 연결 및 구성
-        - 전기, 냉각 시스템에 연결
-        - 운영체제 + 소프트웨어 설치
-    - 전문적인 기술과 경험이 있는 전문가 필요
+![main target](/assets/cloudimg/main_target.png)
+<hr>
+![new type](/assets/cloudimg/new_type.png)
+<hr>
 
-2. 데이터 센터 구축
-    - 전원 공급 구축
-    - 냉각 시스템 구축
-    - 네트워크 인프라 구축
-        - 고속 회선, 라우팅 및 스위칭 장비, 방화벽 등
-    - 물리적 보안 장비 구축
-        - 방화벽, IPS/IDS 등
-    - 전문적인 기술과 경험이 있는 전문가 필요
+# Container as a Service (CaaS)
+- 컨테이너 기술을 기반으로 하는 클라우드 서비스 모델
+- 사용자에게 컨테이너를 배포, 관리 및 실행할 수 있는 환경을 제공하는 모델
+    - **컨테이너** 
+        - 애플리케이션과 애플릿케이션에 필요한 모든 종속성을 포함하는 경량화된 패키지
+        - 컨테이너 이미지를 기반으로 실행된 애플리케이션의 인스턴스
+        ![docker containers](/assets/cloudimg/docker_contrainers.png)
+        - 컨테이너는 가상 머신보다 더 가볍고 빠르게 실행됨
+        ![VS](/assets/cloudimg/VS.png)
+    - **컨테이너 이미지**
+        - 애플리케이션과 그 애플리케이션을 실행하는 데 필요한 모든 것(애플리케이션 실행에 필요한 코드, 라이브러리, 환경 변수, 설정 파일 등)을 포함하는 파일
+        - (컨테이너를 생성하는 데 사용되는) 템플릿
+        - 동일한 이미지를 사용하여 여러 컨테이너 인스턴스를 생성할 수 있음
+        - 이미지는 도커허브(Docker Hub)와 같은 컨테이너 레지스트리에 저장되고 공유될 수 있음.
+        - 사용자는 필요에 따라 이 이미지를 다운로드하여 컨테이너를 생성할 수 있음
+        ![docker hub](/assets/cloudimg/docker_hub.png)
+    - **컨테이너 엔진**
+        - 컨테이너화된 애플리케이션을 생성, 실행 및 관리하는 소프트웨어
+        - ex) Docker
+    - **컨테이너 런타임**
+        - 컨테이너 엔진 내부의 구성 요소 중 하나로, 컨테이너 이미지를 기반으로 컨테이너를 실제로 실행하는 소프웨어 컴포넌트
+        - ex) Containerd
+    *가상환경 비교* (전통 환경 VS 하이퍼이저 기반 vs 컨테이너 기반)
+    ![comparison](/assets/cloudimg/comparison.png)
+    <hr>
+    ![comparison2](/assets/cloudimg/comparison2.png)
 
-3. 운영 및 유지보수
-    - 시스템 모니터링
-        - 서버 용량, 성능, 유저 활동, 기타 등등
-    - 보안
-        - 방화벽, 악성 코드 등
-    - 소프트웨어 업데이트
-        - 운영체제 및 응용 프로그램에 대한 보안 패치나 버그 픽스 패치
-    - 데이터 백업
-    - 성능 튜닝
-    - 장애 대응
-    - 전문적인 기술과 경험이 있는 전문가 필요
+# 모놀리식 아키텍처와 MSA
+![alchitecture](/assets/cloudimg/alchitecture.png)
+- 모놀리식 아키텍처 (MA: Monolithic Architecture)
+    - S/W 애플리케이션을 하나의 단일 코드베이스로 구성
+    - 애플리케이션의 모든 기능과 컴포넌트가 단일한 실행 파일 또는 코드베이스에 통합되어 있음
+    - **장점** : 소규모 프로젝트에 경우 단순하여 유지보수가 편리하고, 빠르게 간단한 서비스를 만들 수 있음
+    - **단점**
+        1. 부분 장애가 전체 서비스의 장애로 확대될 수 있음
+        2. 전체 시스템 구조 파악이 어려움
+        3. 서비스의 스케일아웃(Scale-out)이 어려움
+        4. 서비스 변경이 어렵고, 수정 사항 파악이 힘듦
+        5. 빌드 시간 및 테스트, 배포 시간의 급증
+- 마이크로 서비스 아키텍쳐(MSA: Microservices Architecture)
+    - 어플리케이션을 작고, 독립적으로 배포 가능한 서비스들의 집합으로 분할함.
+    - 각 마이크로서비스는 특정 비즈니스 기능을 수행하며, 서로 독립적으로 개발, 배포, 확장이 가능
+    - 서비스들은 보통 가벼운 동신 메커니즘(e.g. Http RESTful API)를 통해 서로 통신
+    - **장점**
+        1. 각 서비스를 개별적으로 빠르게 배포 가능
+        2. 특정 서비스에 대한 확장성(Scale-out) 유리
+        3. 일부 장애가 전체 서비스로 확장될 가능성 적음 -> 부분적 발생 장애 대한 격리 수월
+    - **단점** : 서비스가 모두 분산되어 있기 때문에 MSA는 모놀리식에 비해 상대적으로 복잡
 
-# 클라우드에서 서비스를 구축하려면
-1. 클라우드 서비스 제공자와 클라우드 서비스 선택
-    - 국외 CSP
-        - Amazon Web Service(AWS), Microsoft Azure, Google Cloud Platform(GCP), IBM Cloud, Oracle Cloud 등
-    - 국내 CSP
-        - Kakaocloud, Naver Cloud Platform, KT Cloud, NHN cloud
-    - 클라우드 서비스: 가상머신, 스토리지, 네트워크, 데이터베이스 등
+# 컨테이너 관리 방법
+- 단일 컨테이너 운영 시
+    - 컨테이너 엔진 사용
+        - 사용자는 Docker와 같은 컨테이너 엔진을 사용하여 컨테이너 이미지를 생성하고, 컨테이너를 실행, 중지, 삭제하는 등의 작업을 수행할 수 있음.
+        - 개발 과정이나 소규모 애플리케이션에서 주로 사용
+- 여러 컨테이너 운영 시
+    - 컨테이너 오케스트레이터는 여러 컨테이너의 배포, 관리, 확장을 자동화하기 위해 사용되는 시스템
+    - 대규모, 분산 컨테이너화된 애플리케이션을 운영할 때 필요한 다양한 기능을 제공함.
+    - Docker Swqrm(도커 스웜): Docker에 내장된 오케스트레이션 도구임. 사용이 간편함
+    - kubernetes(쿠버네티스)
+        - 구글에서 개발되고 오픈소스화됨. 가장 널리 사용됨.
+        - 자동 스케일링, 로드 밸런싱, 자가 치유 등의 고급 기능을 제공
+![container menagement](/assets/cloudimg/container_management.png)
 
-2. 계정 생성 및 인증: 웹 브라우저 콘솔을 이용
-3. 서비스 구성 및 배포
-4. 유지보수
-    - 클라우드 서비스 제공자가 서버 관리, 네트워크 관리, 보안 관리 등의 유지보수를 담당
-![maintenance](/assets/cloudimg/maintenance.png)
+# CaaS & KaaS(*Kubernetes as a Service*)
+- 컨테이너 서비스
+    - 일반적인 컨테이너 서비스는 간단하고 직관적인 운영에 초점을 맞춤
+    - 작거나 중간 규모의 애플리케이션 배포에 적합함
+    - ex) Amazon ECS (*Elastic Container SErvice*), Azure Container Instances (*ACI*), Google Cloud Run
+- 쿠버네티스 서비스
+    - 고도의 자동화와 복잡한 애플리케이션 관리를 가능하게 함
+    - 쿠버네티스는 많은 기능을 제공하고, 대규모 시스템의 관리에 적합함
+    - 높은 학습 곡선을 가지고 있음
+    - ex) Amazon EKS (*Elastic Kubernetes Service*), Azure Kubernetes Service (*AKS*), Google Kubernetes Engine (*GKE*)
 
-### 단점
-1. 비용: 초기 비용이 저렴하지만, 사용량이 늘어날수록 비용이 증가할 수 있음
-2. 의존성 문제: 클라우드 제공업체가 제공하는 서비스에 의존하게 되므로, 서비스 업그레이드, 변경, 중단등의 이유로 인해 비즈니스에 영향을 줄 수 있다.
-3. 데이터 처리 속도 지연 가능성: 클라우드 서비스를 이용할 때 데이터 처리 속도가 지연될 수 있음
-    - *클라우드 서비스 제공업체에서 가용한 자원을 다른 고객과 공유하기 때문*
-4. 데이터 이전 문제: 클라우드 제공업체를 변경하거나, 자체적으로 서비스를 구축할 때 기존 데이터를 이전하는 것이 어려울 수 있음
+    
+# Function as a Service (FaaS)
+- 서버리스 아키텍처를 기반으로하는 클라우드 컴퓨팅 서비스 모델
+    - 서버리스 아키텍처
+        - 개발자가 서버 인프라를 직접 관리하지 않고 코드를 실행할 수 있는 클라우드 컴퓨팅 모델
+        - 클라우드 제공 업체는 서버 프로비저닝, 유지 관리 및 스케일링을 처리하며, 개발자는 코드 작성 및 배포에 집중할 수 있음
+        - 개발자는 유지 보수 비용이나 인력 비용을 절감할 수 있음
+    - Event-driven computing: 특정 이벤트가 발생하면 코드가 실행되도록 할 수 있음.  
 
-### on-demand network access
-- 사용자가 필요한 컴퓨팅 자원에 빠르고 쉽게 접근할 수 있는 능력을 의미
-    - 필요한 컴퓨팅 자원을 자동화된 프로세스에 의해 즉시 할당 받을 수 있음
-    - 필요에 따라 컴퓨팅 자원의 자동 스케일링 가능
+<pre>
+• ex)
+    • Amazon Web Services (AWS)
+    • AWS Lambda
+    • Microsoft Azure
+    • Azure Functions
+    • Google Cloud Platform (GCP)
+    • Google Cloud Functions
+</pre>
 
-### Computing Resources
-- 클라우드 컴퓨팅에서 제공되는 다양한 컴퓨팅 자원들을 의미
-    - ex) 서버, 스토리지, 네트워크, 데이터베이스 등
+# Everything as a Service (XaaS)
+- 모든 것을 서비스 형태로 제공하는 클라우드 컴퓨팅 모델
+- 특징
+    - 사용자가 필요로 하는 모든 것을 클라우드 기반으로 제공
+    - 다양한 클라우드 서비스 모델을 통합하여 제공
+    - 필요한 자원에 대한 비용 절감
+    - 클라우드 기반의 편리한 접근성과 이용성
+    - 고가의 하드웨어 및 소프트웨어 구매 비용 감소
+    - 시스템 구축 시간 감소 및 유지보수 비용 절감
+    - 자원 증감, 확장성, 유연성, 안정성 등 다양한 서비스 제공  
 
-### Shared Pool
-- 클라우드 컴퓨팅에서 제공되는 컴퓨팅 자원이 공유되어 있음을 의미
-
-### Elasticity
-- 사용자가 필요한 컴퓨팅 리소스를 신속하게 프로비저닝
-- 사용이 끝나면 신속하게 리소를 해제
-
-### Provisioning
-- 필요로 하는 서비스 및 리소르를 제공하고 구성하는 과정
-- 다양한 가상 서버 자원(VMs) 프로비저닝
-- 다양한 스토리지 자원(블록, 파일, 객체) 프로비저닝
-- 다양한 네트워크 자원(VPC, 로드 밸런싱, 방화벽 등) 프로비저닝
-- 다양한 데이터베이스 자원(SQL, NoSQL 등) 프로비저닝
-- 다양한 기타 서비스(인증, 모니터링, 로그 등)을 프로비저닝하여 제공
-
-### CSP의 역할
-- 서비스 제공자가 하드웨어, 소프트웨어, 네트워크 등을 구축/제공/운영 -> 고객은 사용만
-- 고객의 컴퓨팅 자원의 요청 즉시 프로비저닝 또는 해제 -> 서비스 제공자와의 상호작용을 최소화
-
-### On-demand self-service
-- 고객이 서비스 제공자와의 인터랙션 없이 컴퓨팅 기능( 예: 서버시간, 네트워크 저장소)을 필요에 따라 자동으로 제공할 수 있음
-- 고객은 스스로 필요한 자원을 프로비저닝할 수 있으며, 이를 위해 사람과의 인터랙션이 필요하지 않음
-
-### Broad network access
-- 클라우드 서비스가 광범위한 네트워크 접근성을 제공함
-- 이기종의 모바일 폰, 태블릿, 노트북, 워크스테이션 등과 같은 다양한 클라이언트 플랫폼에서 접근할 수 있음
-
-### Resource pooling(자원 공유)
-- 클라우드 서비스 제공자는 자원을 멀티네넌트 모델을 사용하는 복수의 고객에게 제공
-- 제공자의 컴퓨팅 자원(예: 저장소, 프로세싱, 메모리, 네트워크 대역폭 등)은 동적으로 할당되거나, 물리적 또는 가상화된 자원으로 풀링(공유 관리)됨.
-- 고객은 이러한 자원이 실제로 어디에 있는지 정확히 알 필요가 없음.
-- 추상적인 높은 수준(예: 국가, 주, 데이터 센터)에서만 위치를 지정할 수 있음.
-
-### Rapid elasticity
-- 필요에 따라 서비스를 확장하거나 축소하여 수요에 비례하도록 빠르게 대응할 수 있음
-- 고객은 사용 가능한 자원이 거의 무한대로 보일 수 있으며, 언제든지 필요한 만큼 사용할 수 있음.
-- 자원의 탄력적인 사용을 통해 비용을 절감하고, 서비스 수준을 유지하면서 클라우드 서비스를 보다 효율적으로 이용할 수 있음
-    - 예를 들어, 웹 사이트에 대한 수요가 증가하면, 클라우드 서비스 제공자는 자동으로 서버 인스턴스를 추가하여 대응
-    - 반대로, 수요가 감소하면, 클라우드 서비스 제공자는 자동으로 서버 인스턴스를 삭제하여 자원 낭비를 방지할 수 있음
-
-### Measured service
-- 추상적인 수준에서 측정 기능을 사용하여 리소스를 자동으로 제어하고 최적화할 수 있음
-- 고객의 서비스 사용량에 대한 투명성을 제공
-    - 예를 들어, 클라우드 서비스의 사용자 계정과 네트워크 대역폭과 같은 서비스의 유형에 따라 추적기능을 사용하여 리소스 사용량을 모니터링 수행
-    -서비스 이용자와 제공자 모두가 자원 사용에 대한 투명성을 가질 수 있음.
+<pre>
+ 기존의 분류 이외의 예)
+    • Backup as a Service (BaaS), Disaster Recovery as a Service (DRaaS), Network as a Service (NaaS),
+    Desktop as a Service (DaaS), Security as a Service (SECaaS), Database as a Service (DBaaS)
+</pre>
