--- a/_posts/cloud/2024-04-06-cloud9.md
+++ b/_posts/cloud/2024-04-06-cloud9.md
@@ -1,219 +1,69 @@
 ---
-title: "서버 가상화"
+title: "네트워크 가상화"
 layout: post
 date: 2024-04-06
 categories: 클라우드_컴퓨팅
 ---
-# 서버 가상화
-- 하이퍼바이저 기반 가상화
-    - 물리적인 자원과 논리적인 자원을 구분함
-    - 하이퍼바이저(hypervisor)라고 불리는 가상화 층(virtualization S/W layer)을 통해 구현됨
-    - "Supervisor of Supervisors"
-    - 실제 물리적 자원의 복잡함을 숨기고 단일하며 일관된 가상 자원들을 제공
-    ![server virtualization](/assets/cloudimg/server_virtualization.png)
-- ex)
-![mk virtual](/assets/cloudimg/mk_virtual.png)
-<hr>
-![mk virtual](/assets/cloudimg/mk_virtual2.png)
-
-# 위치와 역할에 따른 하이퍼바이저 분류
-- 하이퍼 바이저는 설치 위치에 따라 두가지로 분류
-    - Type 1: 'Native' (or 'Bare Metal')형 하이퍼바이저
-        - 물리 서버 위에 운영체제 없이 직접 설치되고, 직접적인 하드웨어 접근항 물리 자원을 가상화
-        - 설치 위치: 하드웨어 위
-        - 용도: 서버 가상화, 클라우드 인프라, 고성능 컴퓨팅 등에 적합
-    - Type 2: 'Hosted' 하이퍼바이저
-        - 운영체제에 설치(하나의 프로그램으로)되어 실행됨
-        - 호스트 운영체제를 통해 하드웨어 리소스에 액세스
-        - 시장에 빠르게 진입할 수 있었기 때문에 첫 x86 가상화 제품 타입이였다
-        - 설치 위치: 호스트 운영체제 위
-        - 용도: 개발, 테스트, 교육 목적 등 경량화된 사용에 적합
-![classify to hypervisor](/assets/cloudimg/classify_hypervisor.png)
-<hr>
-![classify to hypervisor](/assets/cloudimg/classify_hypervisor2.png)
-
-### Type 1 : 'Native'(or 'Bare metal')형 하이퍼바이저
-- **장점**
-    1. 성능: 별도의 Host OS가 없기 때문에 Overhead가 적다(*메모리 사용량, 가상화에 따른 부하 낮음*)
-    2. 효율성 및 안정성: 하드웨어를 직접 제어하기 때문에 효율적이고 안정적으로 리소스를 제어
-- **단점**
-    1. 지원하는 장치가 OS기반 가상화에 비해 적고 호환성 이슈 있을 수 있음. (*많이 개선됨*)
-    2. 관리와 유지보수를 위한 컴퓨터나 콘솔이 필요할 수 있음
-- 젠(Xen), KVM(Kernel-based Virtual Machine), Citrix의 XenServer, IBM의 POWER 하이퍼바이저(PR/SM),
-스파크(SPARC)용 오라클(Oracle) VM 서버, x86용 오라클 VM 서버, 마이크로소프트 하이퍼(Hyper)-V,
-VM웨어의 ESX Server 등
-![Type1](/assets/cloudimg/Type1.png)
-
-### Type2 : 'Hosted'하이퍼바이저
-- **장점**
-    1. 보다 넓은 범위의 하드웨어 지원: 가상의 하드웨어를 에뮬레이팅하기 때문에 호스트 운영체제에 크게 제약상항이 없음(*Host OS가 이미 지원하는 장치를 모두 활용 가능*)
-    2. 운영체제 위에서 소프트웨어로 구동되기 때문에 관리 및 유지보수가 용이함
-- **단점**
-    1. OS위에 OS가 얹히는 방식이이 때문에 Overhead가 클 수 있음. -> 하드웨어 수준의 가상화 지원(VT-x, AMD-V 등)과 직접 수행(direct execution) 기술로 오버헤드가 줄고 있음
-    2. 가용성이 낮음: Host OS의 기용성에 따라 하이퍼바이저와 게스트 OS가 영향을 받음
-- VM웨어 워크스테이션(Workstation), VM웨어 플레이어(Player), 버추얼박스
-(VirtualBox), 맥용 패럴랠스 데스크톱(Parallels Desktop for Mac), QEMU 등
-![Type2](/assets/cloudimg/Type2.png)
-
-### GuestOS와 하이퍼바이저간의 Trade-off
-- GuestOS의 요구사항
-    - GuesrOS는 가상화된 환경에서 작동하며, 물리적 자원에 대한 직접적인 접근이 필요함.
-    - 다시 말하면, 하이퍼바이저가 실제 **물리 자원을 사용하는 것과 유사한 방식의 인터페이스**를 통해 GuestOS에 자원을 제공해야 함
-- 하이퍼바이저의 Needs
-    - 하이퍼바이저는 여러 GuestOS에 **물리 자원의 직접적인 액세스를 허용**하는 동시에, **이들 간의 자원 분배와 조정을 위한 효율적인 제어가 가능**해야 함
-
-### 하이퍼바이저의 두가지 설계 방법
-- 전가상화(Full Virtualization)
-- 반가상화(Para Virtualization)
-
-# 전가상화(Full Virtualization)
-![Full Virtualization](/assets/cloudimg/full_virtualization.png)
-- Guest OS의 수정이 필요 없도록 H/W 전체를 가상화 하는 기술
-    - **특징**
-        - Guest OS는 자신이 가상머신의 OS인지 인지하지 못함
-        - VM 입장에서는 가상하된 하드웨어를 물리적 하드웨어로 인지
+# 네트워크 가상화(Network Virtualization)
+- 다른 테넌트 간에 동일한 물리 네트워크를 공유했을 때의 주의 사항
+    - 격리성: 테넌트 간의 네트워크 트래픽이 서로 침범하지 않도록 해야 함.
+    - 보안: 가상 머신은 다른 가상 머신의 데이터나 네트워크 트래픽을 볼 수 없도록 해야 함.
+    - 성능: 다른 가상 머신들의 성능에 영향을 주지 않으면서 일관된 성능을 제공해야 함.
+![network virtualization](/assets/cloudimg/network_virtualization.png)
+- 테넌트 별로 물리적으로 NIC를 구분
     - **장점**
-        - 하드웨어를 완전히 가상화 하기 때문에 Guest OS의 커널 등의 수정이 필요 없음.
-            - 다양한 운영체제 사용 가능
+        - 격리성, 성능, 보안 문제 해결
     - **단점**
-        - 하이퍼바이저가 모든 명령을 중재하고 번역하기 때문에 비교적 성능이 느림
-(*전가상화에서 하이퍼바이저가 Guest OS의 물리 자원 접근을 제어할 때 Trap& Emulate 방식 사용*)
+        - 테넌트가 늘거나 VM이 다른 서버로 이동하면 NIC 설정 등 유지보수에 대한 비용 증가
+![network virtualization2](/assets/cloudimg/network_virtualization2.png)
+<hr>
+![network virtualization2](/assets/cloudimg/network_virtualization3.png)
 
-# 사전지식: 사용자 어플리케이션의 명령어 종류
-- 운영 체제에서 실행되는 사용자 어플리케이션은 일반적으로 두 가지 분류로 분류할 수 있음
-    - 특권(Privileged) 명령어
-        - 시스템의 설정이나 구성을 변경할 수 있는 명령어
-        - 하드웨어 자원에 직접적으로 접근하거나 운영 체제의 중요한 설정을 변경
-        - Ex) 메모리 관리, 입출력 장치의 제어 등
-    - 비특권(Non-privileged) 명령어
-        - 시스템의 설정이나 구성에 영향을 주지 않는 명령어들
-        - Ex) CPU의 산술 연산, 레지스터 간의 데이터 이동, 조건 분기 등
-
-# 사전지식: CPU 보호 링 (CPU Protection Ring)
-![Cpu Protection ring](/assets/cloudimg/CPU_Protection_Ring.png)
-- 운영 체제의 보안과 안정성을 유지하기 위해 설계된 메커니즘
-    - 운영 체제가 시스템 자원을 효율적으로 관리하고, 악의적인 소프트웨어로부터 시스템을 보호하는 데 중요한 역할을 수행 함.
--  CPU가 제공하는 다양한 권한 수준을 나타냄
-- 일반적으로 이러한 수준은 0에서 3까지의 네 개의 링으로 구분됨 (*낮은 수자일수록 더 높은 권한*)
-    - **링0 (*Ring0*)**: 가장 높은 권한을 가짐. 시스템의 모든 자원에 대해 제한없이 접근이 가능.
-        - 주로 운영 체제의 커널이 이 수준에서 실행됨 (*커널 모드 Kernel Mode*)
-    - **링1 (*Ring1*) 및 링 2(*Ring 2*)**: 이 수준들은 일반적으로 잘 사용되지 않지만, 특정 시스템에서는 드라이버나 다른 중요한 시스템 코드를 위해 예약되어 있음.
-    - **링3 (*Ring3*)** : 가장 낮은 권한을 가짐. 사용자가 어플리케이션이 실행되는 수준 (*사용자 모드 User Mode*)
-
-# 사전지식: 이중 모드 운영(Dual-mode operation)
-![dual mode operation](/assets/cloudimg/dual_mode_operation.png)
-- **이중동작모드(Dual-mode operation)**: 컴퓨터 시스템에서 하드웨어와 소프트웨어가 최고 권한으로 동작하는 **커널모드(특권모드)**와 일반 사용자 레벨에서 동작하는 **사용자모드(비특권모드)** 사이를 전환할 수 있도록 하는 시스템 운영 모드
-- 비특권모드의 사용자 프로세스가 시스템 리소스 엑세스가 필요하다면?
-    - 시스템콜(System Call)을 사용
-        - 사용자 모드 프로그램이 운영 체제의 커널 모드 기능을 요청하는 메커니즘
-        - 즉, 프로그램이 하드웨어, 파일 시스템, 네트워킹 등 일반적으로 사용자 모드에서 접근할 수 없는 시스템 자원에 접근하거나 특수 작업을 수행할 때 사용하는 인터페이스
-
-![sys_call](/assets/cloudimg/sys_call.png)
-# 시스템 콜의 종류
-    - 파일 시스템: 파일 열기, 닫기, 읽기, 쓰기, 삭제 등
-    - 프로세스 간리: 프로세스 생성, 종료, 일시 중단, 재개 등
-    - 메모리 관리: 메모리 할당, 해제, 보호 등
-    - 네트워킹: 네트워크 연결, 데이터 송수신, 소켓 관리 등
-    - 입출력: 키보드, 마우스, 디스플레이 등 입출력 장치 관리
-    - 시스템 정보: 시스템 시간, 날짜, 프로세스 정보 등 시스템 정보 제공
-
-# 시스템 콜 open의 커널 모드 전환 예
-1. 사용자 모드에서 open() 함수를 호출
-2. open() 함수는 시스템 콜을 통해 sys_open() 함수를 호출
-3. 시스템 콜은 CPU에 커널 모드로 전환하라는 요청을 전달 **Trap**
-4. CPU는 현재 실행 중인 사용자 모드 프로세스를 중단하고, 커널 모드로 전환
-5. 커널 모드에서 sys_open() 함수가 실행됨
-6. sys_open() 함수는 파일 열기 작업을 수행
-7. sys_open() 함수가 종료되면, CPU는 다시 사용자 모드로 전환됨
-8. 사용자 모드에서 open() 함수는 sys_open() 함수의 결과를 받아 처리함
-
-# 사전지식: 트랩(Trap)
-![Trap](/assets/cloudimg/Trap.png)
-- 소프트웨어 인터럽트의 한 형태로 운영 체제에게 제어를 넘겨주는 역할을 수행
-- 프로세스의 실행 모드가 사용자 모드(user mode)에서 커널 모드(kernel mode)로 전환됨
-- 트랩이 발생하면 CPU는 현재 실행 중인 코드의 실행을 중지하고, 사전에 정의된 트랩 처리 루틴(커널 내의 코드)을 수행
-- 가상화 환경에서 **하이퍼바이저가 가상 머신이 수행하는 명령어를 제어**하기 위한 방법으로 **트랩**이 사용됨.
-
-# 전가상화 (Trap & Emulate 기법)
-![Trap and Emulate](/assets/cloudimg/Trap_and_Emulate.png)
-- 트랩: 하이퍼바이저가 중간에서 Guest OS의 특권 명령들을 가로챌 수 있음.
-- 에뮬리이트(Emulate): 가상 머신이 하드웨어 접근을 시도할 때 마치 실제 하드웨어에 접근하는 것처럼 동작시킴
-    - 하이퍼바이저는 트랩된 명령을 받고 -> 명령 분석 -> 명령에 대한 동작을 소프트웨어적으로 에뮬레이트
-
-### Trap & Emulate 기법의 문제점
-1. 성능 문제
-    - 게스트 OS가 실행하는 모든 민감한 명령어들이 트랩을 발생시킴
-    - 각 트ㅐㅂ은 **컨텍스트 스위치**를 필요로 하며, 이는 처리해야 할 작업량이 많을 때 성능을 크게 저하시킴.
-        - 컨텍스트 스위치 (Context Switch) : 하나의 프로세스가 CPU를 사용 중인 상태에서 다른 프로세스가 CPU를 사용하도록 하기 위해, 이전의 프로세스의 상태를 보관하고 새로운 프로세스의 상태를 적재하는 작업
-2. 명령어 에뮬렝션의 복잡성
-    - x86 아키텍처는 약 17개 정도 특권 명령과 비특권 명령의 경계가 모호한 명령어가 있어서 Trap & Emulate 방식만으로 하이퍼바이저를 구현하는 것은 어려움
-
-![Binary Translation](/assets/cloudimg/Binary_translation.png)
-- Trap & Emulate 방식의 문제점을 해결하고자 Binary Translation이 등장함
-- Binary Translation
-    - 게스트 OS 내에서 실행되는 **바이너리 전체 코드를 대상으로 명령어를 분석하고 필요에 따라 특권 명령어를 호스트 시스템에서 실행 가능한 명령어로 변환**하는 기술
-    - CPU에서 직접 실행하는 방식이지만 중간에 하이퍼바이저가 번역하는 과정이 추가됨
-    - 변환된 코드는 반복적으로 사용될 수 있으므로, 하이퍼바이저는 이를 캐시하여 동일한 명령에 대해서 빠르게 수행 함.
-- **단점**
-    - 실행되는 바이너리 코드를 분석하고 명령어를 변환하는 데 시간이 걸림
-    - 변환된 명령어를 위한 메모리의 추가 사용이 요구됨
-        - 메모리 관리 오버해드가 있음
-
-# 반가상화 (Para Virtualization)
-- 게스트 운영체제(Guest OS)가 하이퍼바이저(Hypervisor)에게 직접 서비스나 작업을 요청함 -> 하이퍼콜(Hypercall)
-    - 하이퍼콜: 가상화 환경에서 하이퍼바이저가 제공하는 인터페이스
-- **장점**
-    - 필요한 부분만 가상화되어 시스템 오버헤드를 줄이고 리소스 사용을 보다 효율적 사용 가능 -> 성능 향상
-- **단점**
-    - 반가상화를 지원하도록 수정된 커널과 장치 드라이버가 있어야 함
-        - Guest OS의 커널 수정이 필요
-    - 오픈 소스가 아니면 OS에 적용이 쉽지 않음.
-
-# 하드웨어 전가상화 (Hardware Birtualization)
-- 전가상화에서 발생하는 binary translation을 하이퍼바이저가 아닌 CPU에서 바로 처리
-    - CPU가 하이퍼바이저와 GUEST OS 간의 전환을 지원하는 가상화 지원 기술(VT-x와 AMD-V)을 제공
-        - VT-x(Intel Virtualization Technology): Intel 프로세서에서 제공하는 하드웨어 가상화 지원 기술
-        - AMD-V(AMD Virtualization): AMD 프로세서에서 제공하는 하드웨어 가상화 지원 기술
-    - 가상화와 반가상화의 장점을 적절히 혼합: GuestOS에 제약이 없음(전가상화) + 강력한 성능(반가상화)
-    - 이 기술을 사용하기 위해서는 CPU에서 가상화 기술을 반드시 지원해야 함
-        - 최근의 CPU들은 거의 대부분 지원
-![comparison3](/assets/cloudimg/comparison3.png)
-
-# 서버 가상화의 역사
-- 1960년대
-    - CP -40
-        - 1967년에 IBM에서 개발한 **시분할 시스템**
-        - IBM의 시스템/360 컴퓨터 아키텍처를 대상으로 개발됨
-        - 대규모 컴퓨터를 여러 사용자가 동시에 사용할 수 있게 하여 일괄 처리를 개선
-- 1970년대
-    - VM/370
-        - 1972년 IBM이 발표한 시분할 운영 체제 (CP-40에서 발전된 형태)
-        - **"하이퍼바이저"**라는 용어가 사용되기 시작
-        - 하드웨어 자원을 관리하고 가상머신을 생성하고 관리하는 소프트웨어를 가리키는 용어로 사용
-        - 가상 머신 간에 데이터를 주고받을 수 있는 통신 기능 제공
-- 2000년대
- ![server_sv_history](/assets/cloudimg/server_vs_hisotry.png)
-    - VMware: 1998년에 설립하였으며 사용 x86 가상화 솔루션을 개발한 첫 회사
-        - VMware Workstation
-            - 윈도우/리눅스 데스크톱에서 가상 머신 생성
-        - VMware ESX와 GSX
-            - VMware ESX(더 경량화된 ESXi로 개발됨)
-                - Type 1 하이퍼바이저
-            - VMware GSX(Server)
-                - Type 2 하이퍼바이저
-                - 2011년에 개발이 중단
-            - VMware의 주력 제품들은 주로 VMware ESi와 VMware vSphere
-        - VMware vCenter Server
-            - 가상화 인프라를 중앙 집중식으로 관리하는 솔루션
-            - 여러 대의 ESXi 호스트를 관리하고 가상 머신을 배포, 관리, 모니터링
-        - vSphere = ESXi + vCenter + ...
-            - ESXi와 vCenter Server를 결합하여 데이터 센터의 가상화 인프라를 구축하고 관리하는 포괄적인 솔루션
-    - Hyper-V
-        - 2008년 등장
-        - 마이크로소프트사에서 개발한 윈도우 환경 하이퍼바이저
-        - 윈도우 환경에서 가상화를 구현
-
-    - 이외에도
-        - 전가상화 기반인 IBM z/VM
-        - 반가상화 기반인 Parallels Desktop(2006년), Proxmox VE(2008년), Cirtix Hypervisor(2008년), Nutanix AHV(2015년) 등의 가상화 기술들이 있음
-![comparison4](/assets/cloudimg/comparison4.png)
+- **VLAN(Virtual Local Area Network)**
+    - 물리적인 네트워크를 **논리적인 네트워크로 분할**하는 가상화 기술
+    - VLAN Header (VLAN Tag): 어떤 네트워크에 속하는 트레픽인지 나타내는 라벨과 같음
+        - Tag Protocol Identifier(TPID) : 16 비트, 해당 값이 0x8100인 경우에만 VLAN Tag가 있음을 인지
+        - Priority Code Point (PCP): VLAN Tag의 세 번쨰 필드로, 3비트 값을 가지며, VLAN프레임의 우선순위를 나타냅니다. 이 값을 사용하여 VLAN 프레임의 우선순위를 지정할 수 있습니다.
+        - VLAN Identifier (VID): 12 비트(1 ~4094), VLAN ID.Ethernet 프레임이 속한 VLAN을 식별
+![VLAN](/assets/cloudimg/VLAN.png)
+- VLAN을 통한 네트워크 가상화로 멀티 테넌시 구현
+![implementation](/assets/cloudimg/implementation.png)
+- VLAN을 위한 네트워크 가상화 환경
+![VLAN2](/assets/cloudimg/VLAN2.png)
+    - 하이퍼바이저 내부 구성
+        - **가상 스위치(vSwitch)**: 하이퍼바이저 내에서 가상 스위치는 물리 네트워크 인터페이스 카드(NIC)를 가상 머신(vNICs)에 연결하는 중심적 역할을 수행
+        - **가상 스위치 VLAN 설정**
+            - **가상 머신과 연결된 포트**: 이 포트들은 대체로 **엑세스 포트 (Access Port)**로 구성됨.
+                - 엑세스 포트는 하나의 VLAN에만 속해 있으며, 해당 VLAN에 소속된 트래픽만을 VM에 전달
+            - **물리 NIC과 연결된 포트**: 이 포트는 **트렁크 포트 (Trunk Port)**로 구성됨. 트렁크 포트는 여러 VLAN의 트래픽을 전달할 수 있고, 각 VLAN의 트래픽은 VLAn ID에 따라 태그가 지정됨
+    - 언태그(Untagged)포트 / 액세스(Access)포트
+        -  태그 포트가 아닌 일반적인 포트
+        - 언태그 포트는 하나의 VLAN에 속한 경우에만 사용
+    - 태그 (Tagged)포트 / 트렁크 (Trunk)포트
+        - VLAN 정보를 넘겨 여러 VLAN이 한꺼번에 통신하도록 해주는 포트
+        - 태그 포트는 여러 개의 VLAN, 즉 여러 네트워크를 하나의 물리적 포트로 전달하는 데 사용
+- VLAN의 한계
+    - VLAN 태깅을 통해 생성할 수 있는 VLAN의 최대 개수는 4096개로 제한됨
+    - 실제 사용 가능한 숫자는 약 4094개(VLan ID 0과 4095가 특별한 용도로 예약)
+- 네트워크 가상화를 위한 다른 대안
+    - **VXLAN (Virtual Extensible LAN)**
+        - MAC 주소 기반의 L2 네트워크를 L3 네트워크 위에서 가상화하여 대규모 환경에서 VLAN의 한계를 극복할 수 있음
+        - 24비트의 VXLAN 네트워크 식별자(VNI)를 사용하여 약 16백만 개의 가상 네트워크를 지원함(VLAN 대비 4096배 많음)
+- VLAN의 한계
+    - VLAN 태깅을 통해 생성할 수 있는 VLAN의 최대 개수는 4096개로 제한됨
+    - 실제 사용 가능한 숫자는 약 4096개(VLAN ID 0과 4095가 특별한 용도로 예약)
+- 네트워크 가상화를 위한 다른 대안
+    - **VXLAN (Virtual Extensible LAN)**
+    ![VXLAN](/assets/cloudimg/VXLAN.png)
+    - **NVGRE (Network Virtualization using Generic Routing Encapsulation)**
+    ![NVGRE](/assets/cloudimg/GRE.png)
+        - 오버레이 네트워킹 기술
+        - GRE(Generic Routing Encapsulation)을 활용
+            - IP,IPv6, IPX등과 같은 다양한 프로토콜 패킷을 캡슐화
+            - 포인트 - 투 - 포인트 뿐만 아니라 멀티포인트 터널링도 지원함
+        - VSID (Virtual Subnet ID)라고 하는 24비트 필드를 네트워크 구분자로 사용
+    - **Genve (Generic Network Virtualization Encapsualtion)**
+        - Geneve는 VXLAN, NVGRE, STT와 같은 기존 프로토콜의 기능을 통합하고 확장성을 개선하기 위해 설계된 오버레이 네트워킹 프로토콜
+        - 멀티프로토콜 및 멀티테넌시 지원이 가능하며, 다양한 네트워크 가상화 요구 사항을 충족할 수 있음
+        - Geneve 헤더 내에 포함되어 있는 VNI (Virual Network Identifier)라고 하는 24비트 필드를 네트워크 구분자로 사용
+        
