--- a/_posts/cloud/2024-04-06-cloud5.md
+++ b/_posts/cloud/2024-04-06-cloud5.md
@@ -5,13 +5,13 @@ layout: post
 categories: 클라우드_컴퓨팅
 ---
 # 7가지 마이그레이션 전략
-- 애플리케이션을 클라우드로 이전하는 데 있어 일반적으로 사요오디는 일곱 가지 전략
+- 애플리케이션을 클라우드로 이전하는 데 있어 일반적으로 사용되는 일곱 가지 전략
     1. 리팩터/리아키텍트(Refactor/re-architect)
         - 애플리케이션의 기본 구조를 변경하면서 클라우드로 이전하는 전략
         - 클라우드의 기능을 최대한 활용하기 위해 애플리케이션을 근본적으로 재설계
         - 선능, 확장성, 유연성을 개선하기 위해 애플리케이션의 코드를 수정하고, 클라우드 네이티브 서비스(ex: 서버리스 컴퓨팅, 마이크로서비스 아키텍처)를 활용하는 과정을 포함
         - 많은 시간과 자원이 필요하지만, 장기적으로는 운영 비용 절감과 기술적 이점을 제공
-    2. 리플랫폼(Replatform, 도는 lift and reshape)
+    2. 리플랫폼(Replatform, 또는 lift and reshape)
         - 애플리케이션을 클라우드로 이전하면서 일부 최적화를 수행하는 전략
         - 리팩터/리아키텍처와 달리 애플리케이션의 기본 구조나 코드를 대대적으로 변경하지는 않음
         - 클라우드의 특정 기능을 활용하여 애플리케이션의 성능이나 관리 용이성을 개선
