--- a/_posts/cloud/2024-04-06-cloud7..md
+++ b/_posts/cloud/2024-04-06-cloud7..md
@@ -21,6 +21,6 @@ categories: 클라우드_컴퓨팅
 - 스토리지 가상화
     - 여러 대의 물리적인 스토리지 장치를 하나의 가상 스토리지 풀로 통합
     - 스토리지 가상화를 통해 데이터 복제와 백업, 복구 등의 작업을 더욱 쉽고 빠르게 수행
-    - 이와 함꼐, 데이터의 가용성과 안정성을 보장
+    - 이와 함께, 데이터의 가용성과 안정성을 보장
 ![virtualization](/assets/cloudimg/virtualization3.png)
 
