--- a/_posts/cloud/2024-04-06-cloud8.md
+++ b/_posts/cloud/2024-04-06-cloud8.md
@@ -19,7 +19,7 @@ categories: 클라우드_컴퓨팅
 # 위치와 역할에 따른 하이퍼바이저 분류
 - 하이퍼 바이저는 설치 위치에 따라 두가지로 분류
     - Type 1: 'Native' (or 'Bare Metal')형 하이퍼바이저
-        - 물리 서버 위에 운영체제 없이 직접 설치되고, 직접적인 하드웨어 접근항 물리 자원을 가상화
+        - 물리 서버 위에 운영체제 없이 직접 설치되고, 직접적인 하드웨어 접근하여 물리 자원을 가상화
         - 설치 위치: 하드웨어 위
         - 용도: 서버 가상화, 클라우드 인프라, 고성능 컴퓨팅 등에 적합
     - Type 2: 'Hosted' 하이퍼바이저
@@ -50,7 +50,7 @@ VM웨어의 ESX Server 등
     2. 운영체제 위에서 소프트웨어로 구동되기 때문에 관리 및 유지보수가 용이함
 - **단점**
     1. OS위에 OS가 얹히는 방식이이 때문에 Overhead가 클 수 있음. -> 하드웨어 수준의 가상화 지원(VT-x, AMD-V 등)과 직접 수행(direct execution) 기술로 오버헤드가 줄고 있음
-    2. 가용성이 낮음: Host OS의 기용성에 따라 하이퍼바이저와 게스트 OS가 영향을 받음
+    2. 가용성이 낮음: Host OS의 가용성에 따라 하이퍼바이저와 게스트 OS가 영향을 받음
 - VM웨어 워크스테이션(Workstation), VM웨어 플레이어(Player), 버추얼박스
 (VirtualBox), 맥용 패럴랠스 데스크톱(Parallels Desktop for Mac), QEMU 등
 ![Type2](/assets/cloudimg/Type2.png)
@@ -111,7 +111,7 @@ VM웨어의 ESX Server 등
 ![sys_call](/assets/cloudimg/sys_call.png)
 # 시스템 콜의 종류
     - 파일 시스템: 파일 열기, 닫기, 읽기, 쓰기, 삭제 등
-    - 프로세스 간리: 프로세스 생성, 종료, 일시 중단, 재개 등
+    - 프로세스 관리: 프로세스 생성, 종료, 일시 중단, 재개 등
     - 메모리 관리: 메모리 할당, 해제, 보호 등
     - 네트워킹: 네트워크 연결, 데이터 송수신, 소켓 관리 등
     - 입출력: 키보드, 마우스, 디스플레이 등 입출력 장치 관리
@@ -143,7 +143,7 @@ VM웨어의 ESX Server 등
 ### Trap & Emulate 기법의 문제점
 1. 성능 문제
     - 게스트 OS가 실행하는 모든 민감한 명령어들이 트랩을 발생시킴
-    - 각 트ㅐㅂ은 **컨텍스트 스위치**를 필요로 하며, 이는 처리해야 할 작업량이 많을 때 성능을 크게 저하시킴.
+    - 각 트랩은 **컨텍스트 스위치**를 필요로 하며, 이는 처리해야 할 작업량이 많을 때 성능을 크게 저하시킴.
         - 컨텍스트 스위치 (Context Switch) : 하나의 프로세스가 CPU를 사용 중인 상태에서 다른 프로세스가 CPU를 사용하도록 하기 위해, 이전의 프로세스의 상태를 보관하고 새로운 프로세스의 상태를 적재하는 작업
 2. 명령어 에뮬렝션의 복잡성
     - x86 아키텍처는 약 17개 정도 특권 명령과 비특권 명령의 경계가 모호한 명령어가 있어서 Trap & Emulate 방식만으로 하이퍼바이저를 구현하는 것은 어려움
@@ -174,7 +174,7 @@ VM웨어의 ESX Server 등
     - CPU가 하이퍼바이저와 GUEST OS 간의 전환을 지원하는 가상화 지원 기술(VT-x와 AMD-V)을 제공
         - VT-x(Intel Virtualization Technology): Intel 프로세서에서 제공하는 하드웨어 가상화 지원 기술
         - AMD-V(AMD Virtualization): AMD 프로세서에서 제공하는 하드웨어 가상화 지원 기술
-    - 가상화와 반가상화의 장점을 적절히 혼합: GuestOS에 제약이 없음(전가상화) + 강력한 성능(반가상화)
+    - 전가상화와 반가상화의 장점을 적절히 혼합: GuestOS에 제약이 없음(전가상화) + 강력한 성능(반가상화)
     - 이 기술을 사용하기 위해서는 CPU에서 가상화 기술을 반드시 지원해야 함
         - 최근의 CPU들은 거의 대부분 지원
 ![comparison3](/assets/cloudimg/comparison3.png)
