--- a/_posts/cloud_Q/2024-04-13-cloudq4.md
+++ b/_posts/cloud_Q/2024-04-13-cloudq4.md
@@ -57,6 +57,12 @@ categories: 클라우드_컴퓨팅
     *   d) 유지보수 제공
 
 
+
+### 문제
+1. 클라우드 컴퓨팅에서는 총 4가지의 배포 모델이 있음 Public cloud, __ cloud, Hybrid cloud, __ cloud
+2. __ Clouds: 여러 조직이나 개인이 공개적으로 이용 가능한 대규모 클라우드 환경으로 __가 운영하며 장점으로는 __과 비용 효율을 들 수 있다.
+3. __ Clouds: 주로 해당 조직이나 외부 전문가에 의해 운영되며 인프라 위치는 조직의 __ 데이터 센터나 __ 전용 호스팅 제공자에 위치할 수 있으며 장점으로는 보안과 __ 정의가 있다
+4. Community Clouds: 특정 __ 커뮤니티를 위한 클라우드 환경으로 모든 조직에게 __된 서비스 수준, 규정 준수, 데이터 거버넌스 등을 제공하는 것을 목표로 하며 인프라 위치는 클라우드 제공 업체의 __ 센터 또는 조직들이 공동으로 데이터 센터를 구축 또는 __ 방식
 <hr>
 
 
@@ -85,3 +91,9 @@ categories: 클라우드_컴퓨팅
 3.  b) 관리의 복잡성
 4.  c) 공동 사용을 통한 비용 분담
 5.  b) 맞춤형 설정의 자유도
+
+### 정답 
+1. Private cloud, Community
+2. Public , 클라우드 서비스 제공자(CSP), 유연성
+3. Private, 내부, 외부, 사용자
+4. 비즈니스, 최적화, 데이터 , 하이브리드
