--- a/_posts/cloud_Q/2024-04-13-cloudq5.md
+++ b/_posts/cloud_Q/2024-04-13-cloudq5.md
@@ -68,6 +68,15 @@ categories: 클라우드_컴퓨팅
 14.  리테인 전략은 애플리케이션이 비즈니스 요구에 충분히 잘 작동하는 경우 선택될 수 있다. (O/X)
 15.  리타이어 전략은 클라우드 마이그레이션을 통해 조직의 IT자산을 면밀히 검토하고 최적화하는 데 도움을 준다. (O/X)
 
+### 문제
+1. 7가지 마이그레이션 전략이란 __을 __로 이전하는 데 있어 일반적으로 사용되는 일곱 가지 전략
+2. 리팩터/리아키텍트(Refactor/re-architect): 애플리케이션의 __ 구조를 변경하면서 __로 이전하는 전략으로 많은 시간과 자원이 필요하지만, 장기적으로는 __ 비용 절감과 __ 이점을 제공
+3. __ : 애플리케이션을 클라우드로 이전하면서 (일부/전체) 최적화를 수행하는 전략으로 클라우드의 특정 기능을 활용하여 애플리케이션의 성능이나 관리 __을 개선
+4.  __ : 기존에 사용하던 __ 또는 시스템을 버리고(드롭), __ 기반의 새로운 제품이나 서비스로 전환(샵)하는 전략으로 일반적으로 전통적인 라이센스에서 __ 모델로 이동하는 것을 포함함.
+5. __: 애플리케이션을 그대로 클라우드로 이동하는 가장 단순한 형태의 마이그레이션 전략임
+6. 리로케이트(Relocate, 또는 hypervisor-level lift and shift): __ 레벨에서의 워크로드 이동을 가능하게 하는 __ 서비스를 사용할때 가능한 전략
+7. __: 특정 애플리케이션을 클라우드로 이전하지 않고 현재 환경에 그대로 두기로 결정하는 것을 의미함.
+9. 리타이어(Retire) :클라우드 마이그레이션 과정에서 더 이상 필요하지 않거나 사용되지 않는 애플리케이션을 식별하여 __하는 것을 의미함.
 
 
 <hr>
@@ -103,3 +112,12 @@ categories: 클라우드_컴퓨팅
 13.  O
 14.  O
 15.  O
+
+1. 애플리케이션, 클라우드
+2. 기본,  클라우드, 운영, 기술적
+3. 리플랫폼(Replatform, 도는 lift and reshape), 일부, 용이성
+4. 리퍼처스 (Repurchase, 또는 drop and shop),  소프트웨어, 클라우드, SaaS(서비스로서의 소프트웨어)
+5. 리호스트(Rehost, 또는 lift and shift)
+6. 하이퍼바이저, 클라우드
+7. 리테인(Retain, 또는 revisit)
+8. 폐기
