--- a/_posts/cloud_Q/2024-04-13-cloudq9.md
+++ b/_posts/cloud_Q/2024-04-13-cloudq9.md
@@ -51,6 +51,19 @@ categories: 클라우드_컴퓨팅
 9.  Type 2 하이퍼바이저는 하드웨어 수준의 가상화 지원으로 오버헤드가 줄어들었다. (O/X)
 10.  Type 1 하이퍼바이저는 설치 위치가 하드웨어 위이기 때문에 효율성 및 안정성이 높다. (O/X)
 
+### 문제
+1. 가상 머신은 다른 가상 머신의 데이터나 네트워크 __을 볼 수 없도록 해야 하며 __ 간의 네트워크 트래픽이 서로 침범하지 않도록 해야 함.
+2. 테넌트 별로 물리적으로 NIC를 구분할 때의 단점은 __가 늘거나 __이 다른 서버로 이동하면 NIC 설정 등 __에 대한 비용 증가
+3. __:물리적인 네트워크를 논리적인 네트워크로 분할하는 가상화 기술
+4. __: 어떤 네트워크에 속하는 트레픽인지 나타내는 라벨과 같음
+5. __ : 16 비트, 해당 값이 0x8100인 경우에만 VLAN Tag가 있음을 인지
+6. Priority Code Point (PCP): VLAN Tag의 세 번쨰 필드로, 3비트 값을 가지며, VLAN프레임의 __를 나타냅니다.
+7. 가상 스위치(vSwitch): __ 내에서 가상 스위치는 (물리/논리) __ 인터페이스 카드(NIC)를 __ 머신(vNICs)에 연결하는 중심적 역할을 수행
+8. __과 연결된 포트: 이 포트들은 대체로 엑세스 포트 (Access Port)로 구성됨.
+9. __과 연결된 포트: 이 포트는 트렁크 포트 (Trunk Port)로 구성됨.
+10. 트렁크 포트는 여러 __의 트래픽을 전달할 수 있고, 각 VLAN의 트래픽은 VLAn __에 따라 태그가 지정됨
+11. 엑세스 포트는 하나의 VLAN에만 속해 있으며, 해당 VLAN에 소속된 __만을 VM에 전달
+12. __는 VXLAN, NVGRE, STT와 같은 기존 프로토콜의 기능을 통합하고 확장성을 개선하기 위해 설계된 오버레이 네트워킹 프로토콜
 <hr>
 
 ### 정답
@@ -73,3 +86,18 @@ categories: 클라우드_컴퓨팅
 8.  O
 9.  O
 10.  O
+
+
+### 답변
+1. 트래픽, 테넌트
+2. 테넌트, VM, 유지보수
+3. VLAN(Virtual Local Area Network)
+4. VLAN Header (VLAN Tag)
+5. Tag Protocol Identifier(TPID)
+6.  우선순위
+7. 하이퍼바이저, 물리,네트워크, 가상
+8. 가상 머신
+9. 물리 NIC
+10. VLAN, ID
+11. 트래픽
+12. Geneve
