--- a/_posts/cloud/2024-04-06-cloud9.md
+++ b/_posts/cloud/2024-04-06-cloud9.md
@@ -62,7 +62,7 @@ categories: 클라우드_컴퓨팅
             - IP,IPv6, IPX등과 같은 다양한 프로토콜 패킷을 캡슐화
             - 포인트 - 투 - 포인트 뿐만 아니라 멀티포인트 터널링도 지원함
         - VSID (Virtual Subnet ID)라고 하는 24비트 필드를 네트워크 구분자로 사용
-    - **Genve (Generic Network Virtualization Encapsualtion)**
+    - **Geneve (Generic Network Virtualization Encapsualtion)**
         - Geneve는 VXLAN, NVGRE, STT와 같은 기존 프로토콜의 기능을 통합하고 확장성을 개선하기 위해 설계된 오버레이 네트워킹 프로토콜
         - 멀티프로토콜 및 멀티테넌시 지원이 가능하며, 다양한 네트워크 가상화 요구 사항을 충족할 수 있음
         - Geneve 헤더 내에 포함되어 있는 VNI (Virual Network Identifier)라고 하는 24비트 필드를 네트워크 구분자로 사용
