--- a/_posts/cloud_Q/2024-04-13-cloudq7.md
+++ b/_posts/cloud_Q/2024-04-13-cloudq7.md
@@ -50,6 +50,14 @@ categories: 클라우드_컴퓨팅
 9.  하이퍼바이저 기반 가상화는 메모리와 CPU 같은 하드웨어 자원을 가상화한다. (O/X)
 10.  스토리지 가상화를 통해 데이터 복제 및 백업 작업이 어렵고 느리게 수행된다. (O/X)
 
+
+
+### 문제
+1. 가상화: 하나의 __ 리소스(서버, 네트워크 등)를 여러 개의 __ 리소스로 분할하여, 하나의 리소를 여러 명의 사용자나 서비스가 __에 사용할 수 있도록 하는 기술
+2. 서버 가상화로는 __ 기반 가상화: __ 자원을(CPU, Memory 등)을 가상화 와 __ 기반 가상화: 운영체제를 가상화 가 있다
+3. __ 가상화: 하나의 물리적인 네트워크를 여러 개의 가상 네트워크로 분할
+4. 스토리지 가상화: 여러 대의 (논리적인/물리적인) 스토리지 장치를 하나의 가상 __ 풀로 통합하며 스토리지 가상화를 통해 __ 복제와 백업, 복구 등의 작업을 더욱 쉽고 빠르게 수행하고 데이터의 __과 안정성을 보장
+
 <hr>
 
 
@@ -74,3 +82,9 @@ categories: 클라우드_컴퓨팅
 8.  O
 9.  O
 10.  X (스토리지 가상화를 통해 데이터 복제 및 백업 작업을 더욱 쉽고 빠르게 수행할 수 있습니다.)
+
+### 답변 
+1. 물리적인, 논리적인,동시
+2. 하이퍼바이저 ,하드웨어, 컨테이너
+3.  네트워크
+4. 물리적인, 스토리지, 데이터, 가용성
