--- a/_posts/cloud/2024-04-05-cloud2.md
+++ b/_posts/cloud/2024-04-05-cloud2.md
@@ -31,7 +31,7 @@ categories: 클라우드_컴퓨팅
 - 사용자는 인터넷에 연결되어 있는 어떤 장소이든지 클라우드 컴퓨팅을 이용할 수 있음
 
 ### convenient
-- 필요한 컴퓨팅 자원을 빠르게 요청하고 사용할 수 있으며 복잡한 설정이 관리 없이 쉽게 이용 가능
+- 필요한 컴퓨팅 자원을 빠르게 요청하고 사용할 수 있으며 복잡한 설정 관리 없이 쉽게 이용 가능
 - 별도의 설치나 다운로드 없이 웹 브라우저만 있으면 언제든 이용 가능
 - 필요에 따라 자동으로 스케일링되어 자원을 확장 또는 축소 가능
     - 자원 낭비 최소화 및 비용절감
