--- a/_posts/cloud/2024-04-05-cloud3.md
+++ b/_posts/cloud/2024-04-05-cloud3.md
@@ -13,14 +13,14 @@ categories: 클라우드_컴퓨팅
 # IT 인프라 요소들
 - **네트워크**(데이터 전송을 가능하게 하는 물리적 및 논리적 연결 구성)
     - 라우터, 스위치, 방화벽, 네트워크 연결 등
-    - 직접 관리 범위: 네트워크 하드웨어와 스프트웨어의 구성과 유지 관리
+    - 직접 관리 범위: 네트워크 하드웨어와 소프트웨어의 구성과 유지 관리
 - **스토리지**(데이터를 디지털 형태로 저장하기 위한공간)
     - 하드 드라이브,SSD.네트워크 연결 스토리지(NAN), 스토리지 클러스터 등
     - 직접 관리 범위: 스토리지 하드웨어의 구매 및 설정, 데이터 관리 및 백업
 - **서버**(애플리케이션과 서비스를 위한 컴퓨팅 파워를 제공하는 물리적/가상 시스템)
     - 웹 서버, 데이터베이스 서버, 가상 머신 등
     - 직접 관리 범위: 서버 하드웨어의 선택과 설정
-- **가상화**(물리적 자원을 여러 영 체제나 애플리케이션 간에 분할 및 공유)
+- **가상화**(물리적 자원을 여러 운영 체제나 애플리케이션 간에 분할 및 공유)
     - VMWare, Xen, Hyper-V, KVM와 같은 가상화 플랫폼 등
     - 직접 관리 범위: 가상화 소프트웨어의 설치와 구성, 가상 머신의 생성과 관리
 - **운영체제**(하드웨어와 사용자 간의 인터페이스 역할)
@@ -33,7 +33,7 @@ categories: 클라우드_컴퓨팅
     - 직접 관리 범위: 미들웨어 스프트웨어의 선택과 구성, 업데이트와 유지 보수
 - **런타임**(애플리케이션이 실행될 때 필요한 라이브러리/프레임워크를 제공하는 실행 환경)
     - Java Runtime Environment(JRE), .NET Framework, Node.js 등
-    - 직접 관리 범위: 런타ㅣㅁ 환경의 설치/구성, 애플리케이션의 실행과 호환성 유지 관리
+    - 직접 관리 범위: 런타임 환경의 설치/구성, 애플리케이션의 실행과 호환성 유지 관리
 - **데이터**(애플리케이션의 작동에 필요한 정보나 내용이 구조화된 형태)
     - 데이터베이스, 파일 등
     - 직접 관리 범위: 데이터 구조 설계, 저장, 검색, 백업, 보안 정책 구현 등
@@ -98,7 +98,7 @@ categories: 클라우드_컴퓨팅
 - 컨테이너 기술을 기반으로 하는 클라우드 서비스 모델
 - 사용자에게 컨테이너를 배포, 관리 및 실행할 수 있는 환경을 제공하는 모델
     - **컨테이너** 
-        - 애플리케이션과 애플릿케이션에 필요한 모든 종속성을 포함하는 경량화된 패키지
+        - 애플리케이션과 애플리케이션에 필요한 모든 종속성을 포함하는 경량화된 패키지
         - 컨테이너 이미지를 기반으로 실행된 애플리케이션의 인스턴스
         ![docker containers](/assets/cloudimg/docker_contrainers.png)
         - 컨테이너는 가상 머신보다 더 가볍고 빠르게 실행됨
