--- a/_posts/cloud_Q/2024-04-13-cloudq.md
+++ b/_posts/cloud_Q/2024-04-13-cloudq.md
@@ -90,7 +90,7 @@ categories: 클라우드_컴퓨팅
 2. Cloud의 구성요소로는 __, __, 네트워크, 소프트웨어, 서비스 등의 IT 자원들
 3. __: Cloud의 구성요소를 기반으로 하는 IT 서비스의 개발 및 제공과 이용
 4. Cloud Service Provider: 인터넷을 통해 __ 서비스를 제공하는 회사
-5. ___:  IT 인프라, 네틑워크, __, 응용 프로그램 등을 대신 관리해주는 서비스 제공자
+5. ___:  IT 인프라, 네트워크, __, 응용 프로그램 등을 대신 관리해주는 서비스 제공자
 6. 서버 가상화: 하나의 __ 서버를 여러 대의 가상 서버로 분할하는 기술
 7. 서버 가상화에서 중요한 역할 하는건  __다 ( = 가상 머신 모니터(VMM))
 8. VMM: 물리적 서버 __ 위에 __ 머신(vm)을 생성하고 관리하는 소프트웨어, 물리적 리소스 추상화 및 격리, 가상 머신의 생성, 삭제 성능, __ 등을 관리함
@@ -98,11 +98,11 @@ categories: 클라우드_컴퓨팅
 10. __ 컴퓨팅: 데이터 처리를 데이터가 생성되는 장소인 엣지로 이동하여 데이터가 발생하는 곳에서 바로 데이터 처리하여 네트워크 __ 사용을 줄이고 응답 시간을 개선 한다.
 11. 엣지 컴퓨팅의 __ 구조는 데이터 소스, __(엣지), 클라우드 
 12. 클라우드는 더 복작합 처리와 분석, __ 데이터 저장및 관리 작업 수행하며 __ 데이터 센터에서 이뤄진다
-13. 엣지 컴퓨팅의 장점은 빠른 응답 속도, __ 절, 데이터 __ 강화, __ 확보가 있다.
+13. 엣지 컴퓨팅의 장점은 빠른 응답 속도, __ 절약, 데이터 __ 강화, __ 확보가 있다.
 
 
 <hr>
-
+약약
 ### 정답
 
 1.  d) 프린터
