--- a/_posts/cloud_Q/2024-04-13-cloudq3.md
+++ b/_posts/cloud_Q/2024-04-13-cloudq3.md
@@ -88,7 +88,7 @@ categories: 클라우드_컴퓨팅
 ### 문제
 1. IT 인프라: 기업이나 조직에서 IT 서비스를 제공, 관리, 운영하기 위한 기술 및 __,물리적 자원의 집합으로 IT 인프라에서는 각 __별로 역할이 존재함.
 일반적으로 __ 계층이 있어야 __ 계층의 기능이 제대로 수행될 수 있음
-2. IT 인프라 요소들로는 네트워크, __, 서버, __, 운영체제가 있다.
+2. IT 인프라 요소들로는 네트워크, __, 서버, __, 운영체제등이 있다.
 3. ___: 데이터 전송을 가능하게 하는 물리적 및 논리적 연결 구성
 4. ___: 물리적 자원을 여러 운영 체제나 애플리케이션 간에 분할 및 공유
 5. ___: 애플리케이션과 서비스를 위한 컴퓨팅 파워를 제공하는 물리적/가상 시스템
@@ -97,7 +97,7 @@ categories: 클라우드_컴퓨팅
 8. Platform as a Service (Paas): __가 애플리케이션을 개발, 실행, 관리하기 위한 __을 제공하는 모델
 9. Sfotware as a Service (SaaS): 소프트웨어를 사용하는 기업이나 개인에게 __를 통해 소프트웨어를 제공하는 모델로 
 10. __: 컨테이너 기술을 기반으로 하는 클라우드 서비스 모델
-11. 컨테이너: __과 애플릿케이션에 필요한 모든 __을 포함하는 경량화된 패키지
+11. 컨테이너: __과 애플리케이션에 필요한 모든 __을 포함하는 경량화된 패키지
 12. 컨테이너는 __ 머신보다 더 가볍고 빠르게 실행됨
 13. ___ 이미지: 애플리케이션과 그 애플리케이션을 실행하는 데 필요한 모든 것(애플리케이션 실행에 필요한 코드, 라이브러리, 환경 변수, 설정 파일 등)을 포함하는 파일로 동일한 이미지를 사용하여 여러 컨테이너 __를 생성할 수 있으며 이미지는 __와 같은 컨테이너 레지스트리에 저장되고 공유될 수 있음.
 14. 컨테이터 엔진: 컨테이너화된 애플리케이션을 __, 실행 및 __하는 소프트웨어
