--- a/_posts/cloud/2024-03-31-cloud.md
+++ b/_posts/cloud/2024-03-31-cloud.md
@@ -26,12 +26,12 @@ categories: 클라우드_컴퓨팅
 
 # CSP, MSP, 사용자(고객)  
 - Cloud Service Provider: 인터넷을 통해 컴퓨팅 서비스를 제공하는 회사  
-- Maniger Service Provider: IT 인프라, 네틑워크, 보안, 응용 프로그램 등을 대신 관리해주는 서비스 제공자  
+- Maniger Service Provider: IT 인프라, 네트워크, 보안, 응용 프로그램 등을 대신 관리해주는 서비스 제공자  
 
 # 클라우드 컴퓨팅이라는 개념의 시작  
 - 1961년 존 맥카시가 제안한 유틸리티 컴퓨팅
     - 공공 유틸리티처럼 제공되는 개념
-    - 사용자가 필료로 하는 만큼 이용하고 비용을 지불하는 모델  
+    - 사용자가 필요로 하는 만큼 이용하고 비용을 지불하는 모델  
 
 # 클라우드 컴퓨팅의 역사  
 1. 1960년대
@@ -73,7 +73,7 @@ categories: 클라우드_컴퓨팅
         - windows가 개인용 컴퓨터 운영 체제로 등장 및 대중화 됨
         - 단일 운영 체제 환경
             - 하나의 서버에 하나의 app
-        - 한 기업에 있는 여로 조직들은 공통 인프라를 공유하는 것을 원하지 않음
+        - 한 기업에 있는 여러 조직들은 공통 인프라를 공유하는 것을 원하지 않음
 
     - 많은 수의 서버 그리고 낮은 서버 활용도
         - 시간이 갈 수록 서버의 수 증가
@@ -128,9 +128,10 @@ categories: 클라우드_컴퓨팅
         - 빠른 응답 속도: 데이터를 먼 거리의 서버까지 보내고 처리하는 과정을 없애므로 응답 속도가 크게 향상
         - 대역폭 절약: 데이터를 서버까지 전송하는 데 필요한 대역폭을 줄일 수 있음
         - 데이터 보안 강화: 데이터를 외부로 보내지 않고 장치 내에서 처리하기 때문에 데이터 보안을 강화
-        - 연결성 확보: 인터넷 연결이 불안정한 환경에서도 뎅이터 처리가 가능
+        - 연결성 확보: 인터넷 연결이 불안정한 환경에서도 데이터 처리가 가능
     - 엣지 컴퓨팅의 활용 분야
         - 사물 인터넷
         - 자율주행 자동차
         - 증강현실 또는 가상현실
         - 모바일 엣지 컴퓨팅
+데데
