--- a/_posts/cloud/2024-04-05-cloud4.md
+++ b/_posts/cloud/2024-04-05-cloud4.md
@@ -15,7 +15,7 @@ categories: 클라우드_컴퓨팅
 
 ### Public Clouds
 - 여러 조직이나 개인이 공개적으로 이용 가능한 대규모 클라우드 환경
-- **대상** : 다양한 조직, 개인, 개발자 등 넓은 버위의 사용자
+- **대상** : 다양한 조직, 개인, 개발자 등 넓은 범위의 사용자
 - **운영** : 클라우드 서비스 제공자(CSP)가 운영
 - **인프라 위치** : 클라우드 서비스 제공자의 데이터 센터에 위치
 - **장점**
