--- a/_posts/cloud/2024-04-06-cloud5.md
+++ b/_posts/cloud/2024-04-06-cloud5.md
@@ -9,7 +9,7 @@ categories: 클라우드_컴퓨팅
     1. 리팩터/리아키텍트(Refactor/re-architect)
         - 애플리케이션의 기본 구조를 변경하면서 클라우드로 이전하는 전략
         - 클라우드의 기능을 최대한 활용하기 위해 애플리케이션을 근본적으로 재설계
-        - 선능, 확장성, 유연성을 개선하기 위해 애플리케이션의 코드를 수정하고, 클라우드 네이티브 서비스(ex: 서버리스 컴퓨팅, 마이크로서비스 아키텍처)를 활용하는 과정을 포함
+        - 성능, 확장성, 유연성을 개선하기 위해 애플리케이션의 코드를 수정하고, 클라우드 네이티브 서비스(ex: 서버리스 컴퓨팅, 마이크로서비스 아키텍처)를 활용하는 과정을 포함
         - 많은 시간과 자원이 필요하지만, 장기적으로는 운영 비용 절감과 기술적 이점을 제공
     2. 리플랫폼(Replatform, 또는 lift and reshape)
         - 애플리케이션을 클라우드로 이전하면서 일부 최적화를 수행하는 전략
@@ -32,7 +32,7 @@ categories: 클라우드_컴퓨팅
         - 기존의 가상화 환경을 클라우드로 직접 이전할 수 있도록 하여 새로운 하드웨어를 구매하거나, 애플리케이션을 재작성하거나, 기존 운영 방식을 변경할 필요가 없음
     6. 리테인(Retain, 또는 revisit)
         - 특정 애플리케이션을 클라우드로 이전하지 않고 현재 환경에 그대로 두기로 결정하는 것을 의미함.
-        - 리팩터링이나 마이그레이션이 기술적으로 복잡하거나 비용적으로 비효율적인 경우, 또는 애플리케이션이 비즈니스 요구에 맞춰 충분히 잘 작동하는 경우 서낵될 수 있음
+        - 리팩터링이나 마이그레이션이 기술적으로 복잡하거나 비용적으로 비효율적인 경우, 또는 애플리케이션이 비즈니스 요구에 맞춰 충분히 잘 작동하는 경우 선택될 수 있음
         - 나중에 다시 검토할 애플리케이션을 대상으로 할 수 있으며, 마이그레이션 우선 순위에서 후순위로 미루는 경우에 사용됨
     7. 리타이어(Retire)
         - 클라우드 마이그레이션 과정에서 더 이상 필요하지 않거나 사용되지 않는 애플리케이션을 식별하여 폐기하는 것을 의미함.
