--- a/_posts/cloud_Q/2024-04-13-cloudq3.md
+++ b/_posts/cloud_Q/2024-04-13-cloudq3.md
@@ -88,7 +88,7 @@ categories: 클라우드_컴퓨팅
 ### 문제
 1. IT 인프라: 기업이나 조직에서 IT 서비스를 제공, 관리, 운영하기 위한 기술 및 __,물리적 자원의 집합으로 IT 인프라에서는 각 __별로 역할이 존재함.
 일반적으로 __ 계층이 있어야 __ 계층의 기능이 제대로 수행될 수 있음
-2. IT 인프라 요소들로는 네트워크, __, 서버, __, 운영체제등이 있다.
+2. IT 인프라 요소들로는 네트워크, __, 서버, __, 운영체제, __, __, __, __ 있다.
 3. ___: 데이터 전송을 가능하게 하는 물리적 및 논리적 연결 구성
 4. ___: 물리적 자원을 여러 운영 체제나 애플리케이션 간에 분할 및 공유
 5. ___: 애플리케이션과 서비스를 위한 컴퓨팅 파워를 제공하는 물리적/가상 시스템
@@ -105,7 +105,6 @@ categories: 클라우드_컴퓨팅
 16. 모놀리식 아키텍처의 장점은 소규모 프로젝트에 경우 단순하여 __가 편리하고, 빠르게 간단한 서비스를 만들 수 있음
 17. 모놀리식 아키텍처의 단점은 서비스의 __이 어렵고 빌드 시간 및 테스트, __ 시간의 급증할 수 있다
 18. __: 어플리케이션을 작고, 독립적으로 배포 가능한 서비스들의 집합으로 분할하여 각 __를 개별적으로 빠르게 배포 가능
-19. 여러 컨테이너 운영 시 컨테이너 오케스트레이터, __, __를 사용하면 좋
 20. __ 서비스: 고도의 __와 복잡한 애플리케이션 관리를 가능하게 하며 높은 __ 곡선을 가지고 있다
 21. Function as a Service (FaaS): __ 아키텍처를 기반으로하는 클라우드 컴퓨팅 서비스 모델로 개발자가 __ 인프라를 직접 관리하지 않고 코드를 실행할 수 있는 __ 컴퓨팅 모델
 22. __: 모든 것을 서비스 형태로 제공하는 클라우드 컴퓨팅 모델로 __ 증감, 확장성, __, 안정성 등 다양한 서비스 제공
@@ -146,3 +145,28 @@ categories: 클라우드_컴퓨팅
 8.  c) 서비스 확장의 어려움
 9.  b) 서비스 독립적 배포
 10.  b) 인프라 프로비저닝 자동화
+
+
+### 정답
+
+1. 논리적, 계층, 하위, 상위
+2. 스토리지, 런타임, 미들웨어, 애플리케이션, 가상화, 데이터
+3. 네트워크
+4. 가상화
+5. 서버
+6. 미들웨어, 운영체제
+7. IaaS, csp, 스토리지, 물리적인, 가상
+8. 개발자, 플랫폼
+9. 클라우드
+10. SaaS
+11. 애플리케이션, 종속성
+12. VM
+13. 컨테이너, 인스턴스, 도커허브
+14. 생성, 관리
+15. 컨테이너 런타임
+16. 유지보수
+17. 확장(scale-ot), 배포
+18. 마이크로 서비스 아키텍처, 서버, 마이크로서비스
+19. 쿠버네티스, 자동화, 학습
+20. 서버리스, 서버, 클라우드
+21. XaaS, 자원, 유연성
