--- a/_posts/cloud_Q/2024-04-13-cloudq6.md
+++ b/_posts/cloud_Q/2024-04-13-cloudq6.md
@@ -62,8 +62,7 @@ categories: 클라우드_컴퓨팅
 2. __: 하나의 물리적 클라우드 시스템에서 다수의 테넌트가 동시에 사용할 수 있는 구조
 3. 멀티 테넌시의 장점: 고객마다 새로운 __을 만들 필요가 없기 때문에 소프트웨어 개발과 __ 비용을 공유할수 있어서 경제적
 4. 멀티 테넌시 구현 시 유의사항으로는 개인화를 지원하기 위해서는 더 정교한 멀티테넌시 __를 적용해야 하며 업데이트 과정에서 자칫 버그나 장애가 발생하면 (모든/개별) 사용자가 (공통/개인적)으로 장애를 겪을 수 있는 위험성 존재한다
-5. 멀티 테넌트의 요건으로는 격리성(isolation),__,커스터마이징(cusomization), 모니터링 및 __(monitoring and logging),성능, __
-
+5. 멀티 테넌트의 요건으로는 격리성(isolation),__,커스터마이징(cusomization), 모니터링 및 __(monitoring and logging),성능, __, 보안성
 <hr>
 
 
@@ -93,6 +92,7 @@ categories: 클라우드_컴퓨팅
 14.  X (멀티 테넌시 환경에서는 각 테넌트마다 서로 다른 설정이 가능하도록 하는 기능이나 API를 제공할 수 있다.)
 15.  X (멀티 테넌시 환경에서는 유지보수를 효율적으로 관리하기 위해 종종 자동화된 기능이나 웹 인터페이스를 제공할 필요가 있다.)
 
+### 답변
 
 1. 독립된, 가상, 격리
 2. 멀티 테넌트(Multi-tenant)/멀티 테넌시(Multi-tenancy)
